--- a/mod/thmod/localisation/english/ancient_relics_events_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_events_l_english.yml
@@ -172,7 +172,7 @@
  ancrel.107.aliens2.desc:0 "[From.Planet.GetName] contains an abandoned outpost of an unknown design, the source of the alien signal. Abandoned databanks contain detailed plans to invade [arc_site_planet.GetName] and process the population in "pain farms" to tenderize their flesh before they are consumed."
  ancient_battle_site_desc:0 "Scans of [From.Planet.GetName] have revealed an area with packed with refined material and scattered radiologicals, although little is visible from orbit. To find out more we will need to investigate the site on the ground."
  omnirelic_site:0 "$ancrel.21.name$"
- cool_relic_world_site_desc:0 "An entire planet covered in vast structures, this fallen megalopolis surely has secrets to be unearthed."
+ cool_relic_world_site_desc:0 "ดาวเคราะห์ทั้งดวงนี้เต็มไปด้วยโครงสร้างอันกว้างใหญ่ มหานครที่ล่มสลายนี้ย่อมมีความลับที่จะต้องถูกค้นพบอย่างแน่นอน"
  ancrel.108.name:0 "Ancient Battle Site"
  ancrel.108.desc:1 "The refined material has been uncovered, and while further study is needed, our initial impression is that this is the remains of a vast battle site. It appears that one side descended from orbit and was engaged by planetbound defenders. Why there was no orbital bombardment and who the victor was remains unclear."
  ancrel.109.name:0 "Forgotten Grudge"
@@ -201,7 +201,7 @@
  ancrel.7.desc:1 "Finding and communicating with the Psionic Archives has become much easier now. Contact can be made as soon as our expedition lands, at which point we can access more detailed records and concepts. From what we have learned here, some things are too good to be true - and so it was with the godhood granted to the Zroni by the Shroud.\n\nThe energy required to power the vast changes in the Shroud's composition had to come from somewhere, and for them it originated from the supermassive black hole at the center of our galaxy. As the Zroni made their changes within the Shroud, so the singularity expanded: consuming the mass of the galactic center and converting it into energy which was then siphoned into the Shroud. This discovery shook the Zroni: debate turn to argument; arguments led to division; division turned to civil war between their two main factions."
  ancrel.8.desc:1 "Further details of the Zroni civil war factions have been extracted from the crystal. One faction - which came to be known as "The Divine" - felt that the fate of the physical galaxy was of no concern to the Zroni, who could continue their omnipotent existence in the Shroud until the entire galaxy was consumed in some unimaginably far off future. Even then, there are other galaxies, perhaps even other universes which could conceivably be consumed.\n\nThe other faction, "The Saviors", were aghast at this; the Zroni should not destroy the galaxy to live as parasitic gods! Even outside of the Shroud, their Psionic abilities guaranteed them a utopian existence.\n\nThe location of another Zroni colony has also been discovered."
  ancrel.9.desc:1 "It was strangely difficult to locate the Archive on [From.Planet.GetName] - but once we did locate it, it was easy to see why it had been so elusive: the crystal has been shattered, and contains no records that we can access. However, a faint signal suggests that there may be something else to find here."
- ancrel.9.a:0 "Continue searching."
+ ancrel.9.a:0 "ค้นหาต่อไป"
  ancrel.10.desc:1 "A much smaller psionic crystal has been located in some kind of laboratory. The Zroni who recorded their findings within were extremely frustrated: their research had been ridiculed by their peers, and was largely discredited. They believed that the Zroni were no longer the only entities in the Shroud, and that the collective fears and desires of their entire race were coalescing into distinct, sapient entities.\n\nDesiring to grow stronger, these entities had begun to subtly influence the emotions and thoughts of suitable Zroni: slowly causing their behaviors to become more extreme. This may have directly caused the Zroni civil war.\n\nWe also discovered a location reference for one of the Zroni's major colonies."
  ancrel.11.desc:1 "Unlike the previous Zroni worlds, [From.Planet.GetName] was clearly a major colony, with several cities of varying size covering the surface. However, like the others it now sits empty, showing no signs of disaster or death; the fate of its population is unknown. Several Archive crystals have been detected, and will need to be investigated."
  ancrel.12.desc:1 "Most of the accessible records focus on the course of the war. Our working theory is that the mood of the population influences the "strength" of the record about a subject, meaning the most thought-about issues are recorded with greater prominence. Unsurprisingly, the course of the war was on everyone's mind.\n\nThe majority of the Zroni sided with the Saviors, but while they had an advantage in numbers they bore one significant disadvantage: heedless of their effects on the galaxy, the Divine were free to use their full Psionic might; meanwhile the Saviors were limited to whatever power could be drawn from their own bodies.\n\nAt first the war seemed hopeless, but eventually a hero amongst the Saviors would make a terrible - yet vital - discovery."
@@ -216,7 +216,7 @@
  ancrel.18.a:0 "Inconceivable!"
  ancrel.19.desc:1 "As our expedition made ready to leave, one of the psionic crystals suddenly re-established contact. It has indicated that it could prove useful to us, should we decide to bring it with us. Even if the claim is untrue, none of the other crystals we encountered showed signs of sapience; this could warrant further investigation."
  ancrel.19.a:0 "Take the crystal."
- ancrel.21.name:0 "Ruined World"
+ ancrel.21.name:0 "โลกล่มสลาย"
  ancrel.21.desc:0 "Massive, dilapidated structures cover the entire surface of this world. At one time, this city-planet must have been home to billions - but now it is empty. Whoever lived here must have left clues about what happened to them, but finding them will require a detailed examination of the surface."
  ancrel.22.desc:1 "After much fruitless sifting through the ruins, a number of clues directed our search towards remains of a kind of planetary data processing- and storage center. If we can find a way to gain access to whatever records remain, they will be invaluable for unraveling this planet's mysterious past."
  ancrel.23.desc:1 "Once we found an entrance to the data center and forced passage through the wreckage, it was a surprisingly easy task to reactivate- and interface with the computer systems. Self-repairing circuits and learning algorithms quickly came online to restore limited functionality, and communicate with our own computers.\n\nThe cause for this burst of activity quickly became clear: [From.Planet.GetName] was once the capital of a machine empire known as §H"The Omnicodex."§! Named for their driving purpose, the Omni were a hybrid of robots and cyborgs who had attempted to assimilate samples of all biological life in the galaxy, in order to prevent their extinction in the face of unknown galactic calamity.\n\nFrom the records which survive, we gather that this course of action was not popular amongst the other galactic powers of their era; the Omni were eventually defeated in a joint campaign conducted by several of these empires.\n\nBefore their downfall, the Omni managed to sample a great deal of races, and much work was put into developing a device capable of re-creating them if the need should ever arise. This device - The Omnicodex proper - is apparently stored somewhere nearby."
@@ -290,7 +290,7 @@
  ancrel.3999.desc:0 "Scientists from the §H[From.GetName]§! have located the last §HBaol§! specimen!"
  ancrel.2016.name:0 "The Baol Organism"
  ancrel.2016.desc:0 "The [Root.GetName] crew have traced the §YGrunur§! distress signal to its source, uncovering a crumbling §YGrunur§! research facility, hanging in orbit of an otherwise long-abandoned planet. The facility is reaching critical energy failure, having survived for millions of years on an extensive network of solar panels and decaying auto-repair systems, all of which are now approaching terminal status.\n\nShockingly enough, scans of the facility are revealing the presence of a single lifeform. The crew have dispatched an away team, and are ready to report."
- ancrel.2017.name:0 "The Last Baol"
+ ancrel.2017.name:0 "Last Baol"
  ancrel.2017.desc:0 "§HDeep in the dilapidated ruins of the timeworn Grunur research facility, among the long-defunct computer panels and deteriorated research equipment, our ship's crew has made an incredible find.\n\nPincushioned by nutrient tubes and critically failing life support systems, lies one single organism: the last Baol, miraculously still alive, surrounded by the sludgy remains of other specimens in a row of cracked and leaking vats.\n\nOwing to our extensive previous archaeological studies on the species, we should be able to attempt communications with this last specimen.§!"
  ancrel.2017.a:0 "Then let us try."
  ancrel.2017.exter:0 "An organic? Booting extermination protocols..."
@@ -448,15 +448,15 @@
  explosive_fungifoam_housing_desc:0 "By gene-tailoring the ancient virus found in the City of Bones, and adapting it to a local fungus, our scientific units were able to construct rapidly-expanding housing modules for machine unit housing."
  d_mutation_vats:0 "Mutation Vats"
  d_mutation_vats_desc:0 "In a painful ceremonial procedure, members of this post-nuclear exchange society on this planet would expose themselves to near-lethal doses of chemical mutagens, in the hopes of revealing their 'true selves.' The skeletal remains found at the bottom of many of these vats suggest not all supplicants survived the ordeal."
- r_the_last_baol:0 "The Last Baol"
+ r_the_last_baol:0 "Last Baol"
  r_the_last_baol_desc:0 "Preserved in stasis, the body of the last known Baol specimen serves as a silent memorial to the fate of the species, who, afflicted with the tragedy of genocide, ultimately retreated from sentience."
  relic_last_baol_active_tooltip:1 "§HUnlocks Decision:§! §G$decision_baol_life_seed$§!, granting the ability to turn one non-$pc_city$, non-$pc_hive$, non-$pc_machine$ planet into a §Y$pc_gaia$§!."
- r_the_defragmentor:0 "The Defragmentor"
+ r_the_defragmentor:0 "Defragmentor"
  r_the_defragmentor_desc:0 "An ancient computer chip straight from the C.A.R.E Interactive Interface mainframe. It contains a number of remarkably clever algorithms, which can be used to maximize energy generation."
  relic_defragmentor:0 "$r_the_defragmentor$"
  ancrel.4000.name:0 "Whispers in the Stone"
  ancrel.4000.desc:0 "Our recent advancements in mining technology have enabled us to bore deeper into [Root.GetName]'s crust than ever before. In the depths of its cavernous mineral mines, we have stumbled upon traces of an ancient alien civilization leading further into the mountain. The civilization seems to have been built along an unexploited ore vein. Excavating the site will impede our mining operations on the planet and would make abstraction from the new vein impossible but could lead to new scientific discovery."
- ancrel.4000.a:0 "Intriguing. Start digging!"
+ ancrel.4000.a:0 "น่าสนใจ เริ่มขุด!"
  ancrel.4000.b:0 "Our mineral production cannot be halted."
  lithoids_digsite:0 "Whispers in the Stone"
  lithoids_digsite_desc:0 "In the depths of [From.Planet.GetName]'s mines are traces of an ancient alien civilization. Magnificent ornamental structures and cavernous chambers telling of a rich culture have been cut expertly from the bedrock and a system of paved tunnels, protected by massive gates, leads deeper into the mountain.\n\nExploring the site will be perilous as the mountain is rich with methane gas, known for its explosive qualities."
@@ -483,7 +483,7 @@
  ancrel.4011.b:0 "Leave."
  ancrel.4012.name:0 "The Rubricator"
  ancrel.4012.desc:0 "At the coordinates for the Rubricator's last known location we have discovered a habitable planet with what we believe may be some form of settlement covering a large portion of its surface. The settlement consists of tall pile-like towers, visible all the way from space. Our archaeologists are eager to excavate it in search of the Rubricator."
- ancrel.4012.a:0 "Start digging."
+ ancrel.4012.a:0 "เริ่มขุด"
  ancrel.4012.b:0 "Leave."
  rubricator_digsite:0 "Kleptomaniac Rats"
  rubricator_digsite_desc:0 "This planet has played host to a mammalian society of compulsive gatherers and hoarders. Their labyrinthine city is littered with junk, their towering ramshackle buildings pieced together from scraps of re-purposed materials. As far as the eye can see are mountains of knick-knacks, ornaments and artifacts.\n\nThe tiny ratlike inhabitants did not produce any goods of their own but were proficient spacefarers who likely pilfered the things they needed, as well as a whole lot of things they did not need, from other alien cultures."
@@ -774,16 +774,16 @@
  ancrel.6000.name:0 "Omnicodex"
  ancrel.6000.desc:0 "The Omnicodex contains detailed genetic data on thousands of sapient species that once inhabited the galaxy. Our geneticists could use that data to revive an extinct species on one of our planets.\n\nOnce we have selected a planet, the geneticists will go through the Omnicodex and pick a species suitable to its climate."
  ancrel.6000.a:0 "[planet_option_1.GetName]"
- ancrel.6000.a.tooltip:0 "§Y3 Pops§! of a new species with random traits are spawned on §Y[planet_option_1.GetName]§!"
+ ancrel.6000.a.tooltip:0 "ชุบชีวิต §Y3 ประชากร§! เผ่าพันธุ์ใหม่ที่มีคุณลักษณะสุ่มที่ §Y[planet_option_1.GetName]§!"
  ancrel.6000.b:0 "[planet_option_2.GetName]"
- ancrel.6000.b.tooltip:0 "§Y3 Pops§! of a new species with random traits are spawned on §Y[planet_option_2.GetName]§!"
+ ancrel.6000.b.tooltip:0 "ชุบชีวิต §Y3 ประชากร§! เผ่าพันธุ์ใหม่ที่มีคุณลักษณะสุ่มที่ §Y[planet_option_2.GetName]§!"
  ancrel.6000.c:0 "[planet_option_3.GetName]"
- ancrel.6000.c.tooltip:0 "§Y3 Pops§! of a new species with random traits are spawned on §Y[planet_option_3.GetName]§!"
+ ancrel.6000.c.tooltip:0 "ชุบชีวิต §Y3 ประชากร§! เผ่าพันธุ์ใหม่ที่มีคุณลักษณะสุ่มที่ §Y[planet_option_3.GetName]§!"
  ancrel.6000.d:0 "[planet_option_4.GetName]"
- ancrel.6000.d.tooltip:0 "§Y3 Pops§! of a new species with random traits are spawned on §Y[planet_option_4.GetName]§!"
+ ancrel.6000.d.tooltip:0 "ชุบชีวิต §Y3 ประชากร§! เผ่าพันธุ์ใหม่ที่มีคุณลักษณะสุ่มที่ §Y[planet_option_4.GetName]§!"
  ancrel.6000.e:0 "[planet_option_5.GetName]"
- ancrel.6000.e.tooltip:0 "§Y3 Pops§! of a new species with random traits are spawned on §Y[planet_option_5.GetName]§!"
- cara.970.name:0 "The Galatron"
+ ancrel.6000.e.tooltip:0 "ชุบชีวิต §Y3 ประชากร§! เผ่าพันธุ์ใหม่ที่มีคุณลักษณะสุ่มที่ §Y[planet_option_5.GetName]§!"
+ cara.970.name:0 "Galatron"
  cara.970.1.desc:0 "Life is more of a lottery than a competition."
  cara.970.2.desc:0 "Sometimes buckets weigh more than they have to."
  cara.970.3.desc:0 "One sapient's garbage is another sapient's treasure."
