--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -3,7 +3,7 @@
  minor_artifacts_desc:1 "Minor Artifacts ( £minor_artifacts£ ) represent obscure technology and half-forgotten lore recovered from archaic civilizations, only partially understood by our own science. They are more common than Relics, and can be spent to enact various empire-wide effects."
  artifact_actions:0 "Artifact Actions"
  relics:0 "สิ่งเก่าแก่โบราณ"
- relic_activation_cooldown:0 "Relic Activation Cooldown"
+ relic_activation_cooldown:0 "คูลดาวน์การเปิดใช้งานวัตถุโบราณ"
  tech_science_nexus:0 "$think_tank_3$"
  tech_science_nexus_desc:0 "$think_tank_0_MEGASTRUCTURE_DETAILS$"
  tech_sentry_array:0 "$spy_orb_4$"
@@ -30,16 +30,16 @@
  ACTIVATE_RELIC_FOR_TRIUMPH:0 "เปิดใช้งานวัตถุหรือชิ้นส่วนโบราณ"
  CLICK_ACTIVATE_RELIC_FOR_TRIUMPH:0 "§Gคลิกเพื่อ $ACTIVATE_RELIC_FOR_TRIUMPH$§!"
  ACTIVATE_RELIC_FOR_TRIUMPH_TOOLTIP:0 "Click on a Relic to activate a Triumph and gain empire-wide timed effects."
- ACTIVE_TRIUMPH:0 "Triumph Active"
- ACTIVE_TRIUMPH_TEXT:0 "Triumph Active For:"
+ ACTIVE_TRIUMPH:0 "เปิดใช้งาน"
+ ACTIVE_TRIUMPH_TEXT:0 "เปิดใช้งานเป็นระยะเวลา:"
  ACTIVE_TRIUMPH_VALUE:0 "£time£ $VALUE|0$"
- ACTIVE_TRIUMPH_TOOLTIP:0 "We currently have $NAME|Y$ activated.\nTriumph will be active for $NUM|Y0$ more days."
- ACTIVE_EFFECTS:0 "§EActive Effects:§!"
- PASSIVE_EFFECTS:0 "§EPassive Effects:§!"
+ ACTIVE_TRIUMPH_TOOLTIP:0 "ขณะนี้มี $NAME|Y$ ที่เปิดใช้งานอยู่\nวัตถุโบราณจะใช้งานได้อีก $NUM|Y0$ วัน"
+ ACTIVE_EFFECTS:0 "§Eเอฟเฟกต์เมื่อเปิดใช้งาน:§!"
+ PASSIVE_EFFECTS:0 "§Eเอฟเฟกต์ติดตัว:§!"
  PASSIVE_EFFECTS_RESOURCE_TOOLTIP:0 "$NAME$: §G+$AMOUNT|*0$§! "
  UNUSED_SLOT:0 "ช่องสล็อตไม่ได้ใช้"
  ACTIVATE_FAIL_ALREADY_ACTIVE:0 "We already have a Relic Activated"
- ACTIVATION_COST:0 "Activation Cost: "
+ ACTIVATION_COST:0 "ค่าเปิดใช้งาน: "
  MINOR_ARTIFACTS_VALUE:0 "£minor_artifacts£$VAL|0$ "
  MINOR_ARTIFACTS_FULL:0 "$MINOR_ARTIFACTS$: $VAL|Y0$"
  MINOR_ARTIFACTS_DESC:0 "$minor_artifacts_desc$"
@@ -63,19 +63,19 @@
  trait_pc_relic_preference:0 "ชอบอยู่ศัยในโลกโบราณ"
  trait_pc_relic_preference_desc:0 "$trait_pc_arctic_preference_desc$"
  mod_pc_relic_habitability:0 "การอยู่อาศัยได้ในโลกโบราณ"
- d_collapsed_spire:1 "£blocker£ Collapsed Spire"
+ d_collapsed_spire:1 "£blocker£ ตึกสูงพังทลาย"
  d_collapsed_spire_desc:0 "An immense residential spire has collapsed under its own weight in this region, blocking access. While it was still standing, this towering structure must have been among the tallest on the planet."
- d_massive_crevice:1 "£blocker£ Massive Crevice"
+ d_massive_crevice:1 "£blocker£ รอยแยกขนาดใหญ่"
  d_massive_crevice_desc:0 "This region is divided by a vast crevice that cuts through what was once a dense urban zone. The ground here is extremely unstable, with frequent earthquakes and landslides."
- d_shattered_solar_array:1 "£blocker£ Shattered Solar Array"
+ d_shattered_solar_array:1 "£blocker£ แผงโซล่าเซลล์แตกหัก"
  d_shattered_solar_array_desc:0 "The shattered remnants of some kind of colossal solar array. When it was still functional, it must have provided power to a significant portion of this planet."
- d_flooded_reactor_pits:1 "£blocker£ Flooded Reactor Pits"
+ d_flooded_reactor_pits:1 "£blocker£ บ่อเครื่องปฏิกรณ์ที่มีน้ำท่วม"
  d_flooded_reactor_pits_desc:0 "These deep pits appear to have once housed the planet's main energy production facilities. Over the eons, rain and flooding have filled the pits with murky water."
- d_crumbling_mining_tunnels:1 "£blocker£ Crumbling Mining Tunnels"
+ d_crumbling_mining_tunnels:1 "£blocker£ อุโมงค์เหมืองพัง"
  d_crumbling_mining_tunnels_desc:0 "A network of deep tunnels beneath the planet's surface seem to have been its primary source of minerals. Millennia of cave-ins and rockfalls have left only a fraction of the tunnels traversable."
  d_ancient_reactor_pits:0 "Ancient Reactor Pits"
  d_ancient_reactor_pits_desc:0 "These deep pits near the planet's equator once housed its primary energy generators. Much of the surprisingly sturdy infrastructure has survived, and new reactors can be slotted into it."
- d_immense_solar_array:0 "Immense Solar Array"
+ d_immense_solar_array:0 "แผงพลังงานแสงอาทิตย์ขนาดใหญ่"
  d_immense_solar_array_desc:0 "This solar array is nearly the size of a small continent. Most of it has been smashed beyond repair, but the underlying power infrastructure has survived, making it a good site for energy production."
  d_abandoned_mining_tunnels:0 "Abandoned Mining Tunnels"
  d_abandoned_mining_tunnels_desc:0 "Many of the ruins on the planet's surface were built by minerals extracted from these tunnels. Although most have been mined to depletion, there are still several with rich yields."
@@ -135,9 +135,9 @@
  ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_GREATER_THAN_EQ:0 "($CHANCE|%0Y$) Result is $MIN|0Y$ or greater. Finishes chapter."
  ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_LESS_THAN_EQ:0 "($CHANCE|%0Y$) Result is $MAX|0Y$ or less. Adds $CLUES|0Y$ clues."
  archaeology_roll_header:2 "§H$ARCHAEOLOGICAL_SITE_BREAKTHROUGH$§!\nThis reflects the chance of your Scientist making a breakthrough during the excavation of the current site.\n\nEvery time a phase ends, a die (§Y1§! to §Y10§!) is rolled. The result of the roll is added to §YSkill Bonus§! and §YClues§!, then subtracted by §YDifficulty§!.\n\nThe current score before dice roll is $SCORE|0Y$.\n\n§ERoll Outcomes:§!"
- alert_activate_relic_title:0 "Relic Activation Available"
+ alert_activate_relic_title:0 "สามารถการเปิดใช้งานวัตถุโบราณได้"
  alert_activate_relic_instant:0 "It is now possible to activate one of your Relics."
- CHAPTER_TITLE:0 "Chapter $CHAPTER$"
+ CHAPTER_TITLE:0 "ขั้นที่ $CHAPTER$"
  CHAPTER_PROGRESS:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้า: $DAYS|Y$"
  DIFFICULTY_EASY:0 "§Gง่าย§!"
  DIFFICULTY_NORMAL:0 "§YNormal§!"
@@ -156,7 +156,7 @@
  ARCHAEOLOGICAL_SITE_REDACTED:0 "§R -REDACTED: This Chapter was excavated by an Alien Civilization.- §!"
  EXPEDITION_LOG_ROLL_TOOLTIP:0 "§Hผลลัพธ์ของเฟส§!\nเบาะแสที่ได้รับ: $GAINED|Y$\n\nผล: $RESULT|Y$\n  รอบการดำเนินการ: $ROLL|Y$\n  เบาะแส: $CLUES|Y$\n  โบนัสสกิล: $BONUS|Y$\n  ความยาก: $DIFFICULTY|R$\n\n§Eผลลัพธ์ของการดำเนินการ:§!\n§Rล้มเหลว§!: ผล §Y5§! หรือเพิ่มเบาะแสน้อยกว่า §Y0§! เบาะแส\n§Yความคืบหน้า§!: ผลลัพธ์ระหว่าง §Y6-10§! และ §Y1§! เบาะแส\n§Gความคืบหน้า§!: ผลลัพธ์ระหว่าง §Y11-13§! เพิ่ม §Y2§! เบาะแส"
  EXPEDITION_LOG_CLUE_TOOLTIP:0 "เบาะแสที่ได้รับ: $CLUES|Y$"
- ADD_RELIC_EFFECT:1 "Relic found: $NAME|Y$\n"
+ ADD_RELIC_EFFECT:1 "ค้นพบวัตถุโบราณ: $NAME|Y$\n"
  REMOVE_RELIC_EFFECT:0 "Relic lost: $NAME|Y$\n"
  SHARED_SECTOR_TRANSFER_RESOURCES:0 "$SECTOR_STOCKPILE$"
  SHARED_SECTOR_TRANSFER_RESOURCES_DESC:0 "§H$SECTOR_TRANSFER_RESOURCES$§!"
@@ -226,7 +226,7 @@
  artifact_celebrate_diversity:0 "เฉลิมฉลองความหลากหลาย"
  artifact_celebrate_diversity_desc:0 "Display some of our minor artifacts to show the diversity of life in the galaxy."
  celebrate_diversity:0 "Celebrating Diversity"
- artifact_proclaim_superiority:0 "Proclaim Superiority"
+ artifact_proclaim_superiority:0 "ประกาศความเหนือกว่า"
  artifact_proclaim_superiority_desc:0 "Destroy minor artifacts to show disdain for civilizations better off dead."
  proclaim_superiority:0 "Apex of History"
  proclaim_superiority_desc:0 "We are the future of civilization, there is nothing we can learn from the past."
@@ -263,7 +263,7 @@
  artifact_find_peaceful_application_amenities_machine_desc:0 "Study of minor artifacts have yielded a 3% reduction in the battery size of small electronics, increasing our efficiency."
  artifact_find_peaceful_application_leader_improvement_machine:0 "Algorithm Refinement"
  artifact_find_peaceful_application_leader_improvement_machine_desc:0 "Study of minor artifacts have yielded slightly more efficient algorithms for our leaders."
- artifact_lgate_clue:0 "Discover L-Gate Insight"
+ artifact_lgate_clue:0 "ค้นพบข้อมูลเชิงลึก L-Gate"
  artifact_lgate_clue_desc:0 "We should be able to piece together more of the mysteries surrounding the L-Gates using these artifacts."
  artifact_lgate_clue_effect:0 "เวลาคูลดาวน์: £time£ §Y3600§!"
  artifact_lgate_insight_cooldown:0 "เวลาคูลดาวน์ $artifact_lgate_clue$"
@@ -433,7 +433,7 @@
  relic_triumph_cooldown:0 "\n$relic_activation_cooldown$: £time£ §Y3600§!"
  relic_triumph_cooldown_short:0 "\n$relic_activation_cooldown$: £time£ §Y1800§!"
  relic_triumph_cooldown_veryshort:0 "\n$relic_activation_cooldown$: £time£ §Y900§!"
- requires_relic_no_cooldown:0 "$TRIGGER_FAIL$§RCannot activate another relic while §Y$relic_activation_cooldown$§! is active.§!"
+ requires_relic_no_cooldown:0 "$TRIGGER_FAIL$§Rไม่สามารถเปิดใช้งานวัตถุโบราณอื่นในขณะที่ §Y$relic_activation_cooldown$§! ยังเปิดใช้งานอยู่§!"
  relic_queen_spawn:1 "Breed a sizeable Prethoryn fleet"
  relic_rubricator_active:0 "Create §Y30§! £minor_artifacts£Minor Artifacts."
  relic_galaxy_active:0 "Gain §Y50%§! tech progress in a random technology."
@@ -446,7 +446,7 @@
  relic_zro_crystal_active:0 "Contact the spirit of §Y$relic_zro_entity_name$§! to seek guidance in different matters."
  relic_zro_entity_name:0 "Ja'Baxti"
  relic_omicodex_opinon:0 "§G+25§! opinion with §YNon-Robotic§! empires."
- relic_omnicodex_active:2 "§YSpawn Pops§! from an extinct species on one of your planets"
+ relic_omnicodex_active:2 "§Yกำเนิดประชากรใหม่§! จากสิ่งมีชีวิตเผ่าพันธุ์ที่สูญพันธุ์บนดาวเคราะห์ดวงใดดวงหนึ่งของคุณ"
  relic_orb_active:0 "§Y[Root.GetRulerTitle] [Root.GetRulerName]§! gains §Y500§! experience."
  relic_galatron_active:0 "The Galatron randomly spews forth resources"
  relic_surveyor_active:0 "Scan planets in your territory for new resource deposits"
@@ -457,13 +457,13 @@
  khans_throne_passive_effect:0 "Grants access to the §Y$preset_satrapy$§! Subject Preset."
  r_worm_scales:0 "Scales of the Worm"
  r_worm_scales_desc:0 "Lucent and still warm to the touch. The scales emit a low-pitched hum which cannot be explained by way of science."
- r_rubricator:0 "The Rubricator"
+ r_rubricator:0 "Rubricator"
  r_rubricator_desc:2 "This tiny cube fits snugly within your palm yet holds a digital treasure of innumerable scanned alien artifacts, dating back to the youth of the universe. And it can replicate them infinitely. Never before has the unknown been so close."
- r_omnicodex:0 "The Omnicodex"
+ r_omnicodex:0 "Omnicodex"
  r_omnicodex_desc:0 "Eons ago a benevolent race of Cyborgs set out to ensure the perpetuation of biological life by sampling and indexing every race in the galaxy, to ensure that any extinction event need not be permanent. While their goal of galactic salvation was eventually thwarted by foolish zealots and a disgusting Hivemind, their legacy remains."
- r_galatron:0 "The Galatron"
+ r_galatron:0 "Galatron"
  r_galatron_desc:0 "$galatron_modifier_desc$"
- r_surveyor:0 "The Surveyor"
+ r_surveyor:0 "Surveyor"
  r_surveyor_desc:0 "An incredibly powerful scanning tool that uses technology that cannot be replicated. Its origins are shrouded in mystery - it does not seem to have been built by the Mining Drones who last possessed it."
  r_galaxy:0 "Miniature Galaxy"
  r_galaxy_desc:0 "This miniature galaxy was constructed by a civilization known only as "Belligerent Party C," who then used it to escape the confines of their trapped homeworld.\n\nThe galaxy is contained within an impenetrable subspace field inside its tank, but the activities of its denizens can still be observed to an extent."
@@ -720,16 +720,16 @@
  NAME_Sentinels:0 "เซนติเนล"
  sentinel_army:0 "เซนติเนล"
  sentinel_army_desc:0 "Living statues with a mechanical core, bodies humming and skin glowing, radiation pulsating from their cores, ready to rain destruction on their enemies!"
- job_scrap_miner:0 "Scrap Miner"
- job_scrap_miner_plural:0 "Scrap Miners"
+ job_scrap_miner:0 "นักขุดเศษซาก"
+ job_scrap_miner_plural:0 "นักขุดเศษซาก"
  job_scrap_miner_desc:0 "$job_scrap_miner_plural$ explore the depths of the shattered ring world for materials suitable for construction."
- job_scrap_miner_effect_desc:0 "£job_scrap_miner£ $job_scrap_miner_plural$ produce £minerals£ §Y$minerals$§! and £alloys£ §Y$alloys$§!."
- job_scrap_miner_drone:0 "Scrap Miner Drone"
- job_scrap_miner_drone_plural:0 "Scrap Miner Drones"
+ job_scrap_miner_effect_desc:0 "£job_scrap_miner£ $job_scrap_miner_plural$ ผลิต £minerals£ §Y$minerals$§! และ £alloys£ §Y$alloys$§!"
+ job_scrap_miner_drone:0 "โดรนขุดเศษซาก"
+ job_scrap_miner_drone_plural:0 "โดรนขุดเศษซาก"
  job_scrap_miner_drone_desc:0 "$job_scrap_miner_drone_plural$ explore the depths of the shattered ring world for materials suitable for construction."
- job_scrap_miner_drone_effect_desc:0 "£job_scrap_miner£ $job_scrap_miner_drone_plural$ produce £minerals£ §Y$minerals$§! and £alloys£ §Y$alloys$§!."
- mod_job_scrap_miner_add:0 "$job_scrap_miner$ Jobs"
- mod_job_scrap_miner_drone_add:0 "$job_scrap_miner_drone$ Jobs"
+ job_scrap_miner_drone_effect_desc:0 "£job_scrap_miner£ $job_scrap_miner_drone_plural$ ผลิต £minerals£ §Y$minerals$§! และ £alloys£ §Y$alloys$§!"
+ mod_job_scrap_miner_add:0 "งาน$job_scrap_miner$"
+ mod_job_scrap_miner_drone_add:0 "งาน$job_scrap_miner_drone$"
  building_scrap_processing_plant_desc:0 "Processing plants for material scavenged from the ring."
  building_scrap_processing_hub_desc:0 "Massive hubs where material scavenged from the ring is received and then shuttled to arrays of purifiers."
  mod_planet_miners_alloys_produces_add:0 "£alloys£ $alloys$จาก £job_miner£ [GetMinerPlural]"
