--- a/mod/thmod/localisation/english/aquatics_l_english.yml
+++ b/mod/thmod/localisation/english/aquatics_l_english.yml
@@ -204,16 +204,16 @@
  civic_corporate_anglers:0 "$civic_anglers$"
  civic_corporate_anglers_desc:0 "$civic_anglers_desc$"
  civic_tooltip_anglers_effects:2 "On §HOcean Worlds§!, §HAgriculture Districts§! are uncapped.\nOn §YWet§! worlds, £job_farmer£ §Y$job_farmer_plural$§! are replaced by £job_angler£ §Y$job_angler_plural$§! and £job_pearl_diver£ §Y$job_pearl_diver_plural$§!.\n§Y$job_angler_plural$§! produce §Y8§! £food£ §Y$food$§! and §Y2§! £trade_value£ §Y$TRADE_VALUE$§!, and §Y$job_pearl_diver_plural$§! produce §Y3§! £consumer_goods£ §Y$consumer_goods$§! and §Y3§! £trade_value£ §Y$TRADE_VALUE$§!.\nAdds the §H$trait_aquatic$§! trait."
- job_aqu_angler_effect_desc:1 "£job_angler£ $job_angler_plural$ produce £food£ §Y$food$§! and £trade_value£ §Y$TRADE_VALUE$§!"
- job_angler:0 "Angler"
+ job_aqu_angler_effect_desc:1 "£job_angler£ $job_angler_plural$ ผลิต £food£ §Y$food$§! และ £trade_value£ §Y$TRADE_VALUE$§!"
+ job_angler:0 "นักตกปลา"
  job_angler_plural:0 "นักตกปลา"
  job_angler_desc:0 "Hook and line are things of the past, but sustainably growing and hauling food out of nature takes equal patience, much planning, and great care."
- mod_job_angler_add:0 "Angler Jobs"
+ mod_job_angler_add:0 "งานนักตกปลา"
  job_farmers_and_anglers:0 "$job_farmer_plural$ และ £job_angler£ $job_angler_plural$"
- job_farmer_and_angler:0 "$job_farmer$ and £job_angler£ $job_angler$"
- job_pearl_diver:0 "Pearl Diver"
- job_pearl_diver_plural:0 "Pearl Divers"
+ job_farmer_and_angler:0 "$job_farmer$ และ £job_angler£ $job_angler$"
+ job_pearl_diver:0 "นักล่าไข่มุก"
+ job_pearl_diver_plural:0 "นักล่าไข่มุก"
  job_pearl_diver_desc:0 "Concerning cultivation and farming more than diving, these specialists still bring back a large variety of treasures from the depths."
- mod_job_pearl_diver_add:0 "Pearl Diver Jobs"
- job_pearl_diver_effect_desc:0 "£job_pearl_diver£ $job_pearl_diver_plural$ produce £consumer_goods£ §Y$consumer_goods$§! and £trade_value£ §Y$TRADE_VALUE$§!"
+ mod_job_pearl_diver_add:0 "งานนักล่าไข่มุก"
+ job_pearl_diver_effect_desc:0 "£job_pearl_diver£ $job_pearl_diver_plural$ ผลิต £consumer_goods£ §Y$consumer_goods$§! และ £trade_value£ §Y$TRADE_VALUE$§!"
  civic_tooltip_not_anglers:0 "ไม่มีพลเมือง §Y$civic_anglers$§!"
