--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -2313,18 +2313,18 @@
  pirate.2.g:1 "They will be brought to justice."
  pirate.2.h:0 "They must be brought back into the fold."
  pirate.2.i:0 "Damned pirates..."
- pirate.5.name:0 "Space Pirates"
+ pirate.5.name:0 "สลัดอวกาศ"
  pirate.5.desc:0 "The vessels we have come across in certain systems are definitely capable of receiving and transmitting standard communication protocols.\n\nVisual indicators point to their culture being largely spaceborne, and some phenotypes observed among them match no known planet-dwelling civilizations.\n\nUnfortunately, their crews are completely uninterested in civil discourse. What little we have been able to glean from intercepting intra-fleet communications indicate that they primarily subsist on piracy, occasionally recruiting fringe elements of spacefaring civilizations to their cause."
  pirate.5.a:0 "Deplorable."
- pirate.10.name:0 "The Pirate Haven"
+ pirate.10.name:0 "รังโจรสลัด"
  pirate.10.desc.nobirth:0 "The [Root.GetName] reports that the fleet has encountered a significant pirate presence in the [From.GetName] system.\n\nJudging by preliminary scans of the immense ships and the stations harboring them, this is a historical pirate port. It has likely been in uninterrupted operation since whatever ancient era it was that first spawned these thieving marauders."
  pirate.10.desc.birth:0 "The [Root.GetName] reports that the fleet has come across a pirate hub in the [From.GetName] system. This is likely the source of the corrupting influence that turned some of the outcast and criminal elements of the [Root.Owner.GetName] into violent freebooters.\n\nGoing by their massive, misshapen and visibly aged ships, these pirates are likely the remains of some past galactic era - possibly descendants of privateers in an ancient war, turned pirate following the mutual destruction of enemy and ally alike."
  pirate.10.a.nobirth:0 "Piracy is an indiscriminate threat."
  pirate.10.a.birth:0 "We strike at the heart of this malice."
- pirate.15.name:0 "Pirate Haven Destroyed"
+ pirate.15.name:0 "รังโจรสลัดถูกทำลาย"
  pirate.15.desc:2 "The [killer_fleet.GetName] reports that the timeworn pirate galleons in the [killer_fleet.solar_system.GetName] system have been destroyed. Save for any stragglers in nearby systems, galactic piracy is a thing of the past... For now.\n\nWe were able to recover a considerable hoard of ill-gained loot from their strong room, a treasure which we promptly relocated to our own coffers."
  pirate.15.desc2:1 "The [killer_fleet.GetName] reports that the timeworn pirate galleons in the [killer_fleet.solar_system.GetName] system have been destroyed. Save for any stragglers in nearby systems, galactic piracy is a thing of the past... For now.\n\nWe were able to recover a considerable hoard of ill-gained loot from their strong room, including an ancient datapad which, startlingly, seems to offer fresh insights into how the mysterious L-Gates function."
- pirate.25.name:0 "Pirate Station Raided"
+ pirate.25.name:0 "สถานีอวกาศของโจรสลัดถูกโจมตี"
  pirate.25.desc:0 "The [pirate_slayers.GetName] has destroyed a pirate station in the [pirate_slayers.GetStarName] system, and recovered its strong room module."
  pretender.1.name:0 "[From.GetRegnalName] Dies Heirless"
  pretender.1.desc_01:0 "[From.GetRegnalName] has passed away, and seven days of mourning have been announced on [Root.Capital.GetName]. Unfortunately, there was no declared heir and two separate claims have been made on the throne.\n\nThe strongest contender has been crowned [Root.GetRulerTitle] under the name [Root.GetRulerName], but this has done little to settle the issue."
