--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -94,7 +94,7 @@
  SORT_BY_DIPLOMATIC_STANCE:0 "§Hเรียงโดยท่าทีทางการทูต§!"
  SORT_BY_HOUSING:0 "เรียงโดยที่อยู่อาศัย"
  SORT_BY_DESIGNATION:0 "เรียงตามการกำหนดประเภทของอาณานิคม"
- SORT_BY_UNEMPLOYMENT:0 "Sort by Unemployment"
+ SORT_BY_UNEMPLOYMENT:0 "เรียงตามการว่างงาน"
  HABITABILITY_RESETTLEMENT_CHANGE:0 "Habitability will change from $CURRENT|0=-%$ to $NEW|0=-%$"
  CLICK_TO_RESETTLE_POP_ADVANCED:0 "CTRL-Click to transfer §Y5§! Pops\n\nShift-Click to transfer §Yall§! Pops"
  EMPIRE_EMPLOYMENT:0 "Empire Employment"
@@ -103,8 +103,8 @@
  LEADER_POPUPLATION:0 "Leader Pops"
  SPECIES_LIVING_ON_WORLDS:0 "Living on World(s)"
  SPECIES_LIVING_ON_HABITATS:0 "Living on Habitat(s)"
- PROPOSE_RESOLUTION_TITLE:0 "Propose Resolution"
- PROPOSE_RESOLUTION_CONFIRMATION_DESC:3 "It will cost our Empire $VALUE|0Y$ to propose this Resolution. Shall we add it to the Proposal Queue?"
+ PROPOSE_RESOLUTION_TITLE:0 "เสนอญัตติ"
+ PROPOSE_RESOLUTION_CONFIRMATION_DESC:3 "จะต้องใช้ $VALUE|0Y$ ของจักรวรรดิเรา เพื่อเสนอญัตตินี้ เราจะบรรจุลงในคิวญัตติ?"
  WARTARGET_ALLIES_DESC:0 "The Allies of your War Target will also be drawn into War against us."
  ORDER_OF_ROTATION:0 "ลำดับการหมุนเวียน:"
  NEW_FEDERATION_PRESIDENT_CHOSEN_TITLE:0 "New Federation President"
