--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -35,13 +35,13 @@
  origin_tooltip_machine_effects:1 "- เริ่มต้นด้วย §Hโลกเครื่องจักร§! ที่เป็นโลกบ้านเกิดของคุณ"
  d_arcane_generator:0 "เครื่องกำเนิดไฟฟ้าที่ซ่อนไว้"
  d_arcane_generator_desc:0 "This ancient machine seems to respond to our needs by producing the resources needed to upkeep some of our segments."
- d_decrepit_tunnels_1:1 "£blocker£ Decrepit Tunnels"
+ d_decrepit_tunnels_1:1 "£blocker£ อุโมงค์เสื่อมโทรม"
  d_decrepit_tunnels_1_desc:0 "These ancient and decrepit tunnels have never been fully explored or cleared."
  d_decrepit_tunnels_2:0 "$d_decrepit_tunnels_1$"
  d_decrepit_tunnels_2_desc:0 "$d_decrepit_tunnels_1_desc$"
  d_decrepit_tunnels_3:0 "$d_decrepit_tunnels_1$"
  d_decrepit_tunnels_3_desc:0 "$d_decrepit_tunnels_1_desc$"
- d_segment_rubble_1:0 "£blocker£ Ancient Rubble"
+ d_segment_rubble_1:0 "£blocker£ ซากปรักหักพังโบราณ"
  d_segment_rubble_1_desc:0 "Broken down machinery and other debris obstructs workers from utilizing the entire segment."
  d_segment_rubble_1_small:0 "$d_segment_rubble_1$"
  d_segment_rubble_1_small_desc:0 "$d_segment_rubble_1_desc$"
@@ -141,11 +141,11 @@
  CLICK_TO_LEAVE:0 "§Rคลิกเพื่อออกจาก $GALACTIC_COMMUNITY$§!"
  CLICK_TO_LEAVE_DESC:1 "§LIf you leave the $GALACTIC_COMMUNITY$ you will no longer receive benefits from any Active Modifiers, but will be unable to rejoin and have reduced £diplo_weight£ Diplomatic Weight for §R20 years§!.\n\nYou will, however, also no longer be negatively affected by being in breach of any galactic laws§!\n"
  RESOLUTION_QUEUE:0 "คิวข้อเสนอ (ญัตติ)"
- RESOLUTION_QUEUE_DESC:0 "§gNo Resolutions have been Proposed§!"
- RESOLUTION_SUPPORT_DESC:0 "§gSupport Options Disabled until a Resolution has been Proposed§!"
- GALACIC_FOCUS:0 "แนวโน้ม"
- GALACTIC_FOCUS_DESC:1 "§EThe Galactic Focuses are objectives that give direction to the [global_event_country.GetGalCommunityOrGalImperium].§!"
- GALACTIC_FOCUS_REWARD:0 "Reward"
+ RESOLUTION_QUEUE_DESC:0 "§gไม่มีการเสนอญัตติ§!"
+ RESOLUTION_SUPPORT_DESC:0 "§gตัวเลือกการสนับสนุนถูกปิดใช้งานจนกว่าจะมีการเสนอญัตติ§!"
+ GALACIC_FOCUS:0 "โฟกัสของกาแลกติก"
+ GALACTIC_FOCUS_DESC:1 "§Eโฟกัสของกาแลกติก เป็นเป้าหมายที่กำหนดทิศทางให้กับ [global_event_country.GetGalCommunityOrGalImperium]§!"
+ GALACTIC_FOCUS_REWARD:0 "รางวัล"
  GALACTIC_COUNCIL:0 "สภากาแลกติก"
  GALACTIC_COUNCIL_DESC:1 "§LThe Galactic Council are leaders in the Galactic Community. They have special resolution powers to help speed along the voting and proposing process§!"
  JOINS_GALACTIC_COUNCIL:0 "$COUNTRY|Y$ gains a seat on the $GALACTIC_COUNCIL$"
@@ -162,8 +162,8 @@
  IS_NOT_PROPOSING_ANY_RESOLUTION:1 "$COUNTRY|Y$ is NOT proposing any resolution"
  IS_PROPOSING_RESOLUTION:0 "$COUNTRY|Y$ is proposing $RESOLUTION|Y$"
  IS_NOT_PROPOSING_RESOLUTION:0 "$COUNTRY|Y$ is NOT proposing $RESOLUTION|Y$"
- IS_YEARS_SINCE_COMMUNITY_FORMATION:0 "Years since $GALACTIC_COMMUNITY$ formation is $COMPARE$ $NUM_COMPARE$"
- IS_NOT_YEARS_SINCE_COMMUNITY_FORMATION:0 "Years since $GALACTIC_COMMUNITY$ formation is NOT $COMPARE$ $NUM_COMPARE$"
+ IS_YEARS_SINCE_COMMUNITY_FORMATION:0 "จำนวนปีตั้งแต่$GALACTIC_COMMUNITY$ก่อตั้ง $COMPARE$ $NUM_COMPARE$"
+ IS_NOT_YEARS_SINCE_COMMUNITY_FORMATION:0 "จำนวนปีตั้งแต่$GALACTIC_COMMUNITY$ก่อตั้ง ไม่$COMPARE$ $NUM_COMPARE$"
  IS_YEARS_SINCE_COUNCIL_ESTABLISHMENT:0 "Years since $GALACTIC_COUNCIL$ establishment is $COMPARE$ $NUM_COMPARE$"
  IS_NOT_YEARS_SINCE_COUNCIL_ESTABLISHMENT:0 "Years since $GALACTIC_COUNCIL$ establishment is NOT $COMPARE$ $NUM_COMPARE$"
  IS_NUM_COUNCIL_POSITIONS:1 "Number of $GALACTIC_COUNCIL$ positions is $COMPARE$ $NUM_COMPARE$"
@@ -1289,7 +1289,7 @@
  CHANGE_FEDERATION_TYPE_DESC:0 "Are you sure you wish to change to $TYPE|Y$? This will reset your Federation to §YLevel 1§!. A cohesion penalty of $PENALTY|+0$(per member) will be applied"
  CHANGE_FEDERATION_TYPE_CURRENT_DESC:0 "Current federation type selected"
  RIGHT_CLICK_TO_VIEW_PROPOSED:0 "§HClick a proposed Resolution in the queue to view its details§!"
- PROPOSE_RESOLUTION_NAME:0 "Propose a Resolution!"
+ PROPOSE_RESOLUTION_NAME:0 "เสนอญัตติ!"
  PROPOSE_RESOLUTION_DETAILS:0 "Resolutions can be proposed from the Resolutions Tab, adding it to the Proposal Queue on the left. From list we can choose to support a Resolution, adding our Diplomatic Weight to it.\n\nThe Resolution with the most support will eventually move onto the Senate Floor for the final vote."
  PROPOSE_RESOLUTION_GREETINGS:0 "ยินดีต้อนรับสู่ประชาคมกาแลกติก!"
  DIPLOMATIC_ACTION_TITLE:0 "กิจกรรมทางการทูต"
@@ -1562,8 +1562,8 @@
  d_spore_vents_desc:0 "Shroom spores can be refined for industrial use."
  d_cave_shroom_veins:0 "Cave Shroom Veins"
  d_cave_shroom_veins_desc:0 "Ridding the caves of fungus revealed rich mineral veins."
- job_gas_plant_engineer:0 "Gas Plant Engineer"
- job_gas_plant_engineer_plural:0 "Gas Plant Engineers"
+ job_gas_plant_engineer:0 "วิศวกรโรงงานแก๊ส"
+ job_gas_plant_engineer_plural:0 "วิศวกรโรงงานแก๊ส"
  job_gas_plant_engineer_desc:0 "These workers operate the massive filter facilities built over Cave Mushroom spore exhausts."
  mod_job_gas_plant_engineer_add:0 "งาน $job_gas_plant_engineer$"
  mod_job_gas_plant_engineer_per_pop:2 "§G+1§! อาชีพ $job_gas_plant_engineer$ ต่อ $VALUE$ ประชากร"
@@ -1824,7 +1824,7 @@
  site_benign_cover_up_intro:0 "We have found a good location to bury the cache intended for the Thwaa'Phyr as they one day take to the stars anew. A gift in the future, to giants of the past."
  origin.1365.name:0 "Here! We Build Here!"
  origin.1365.desc:1 "All the materiel and manpower has been sent down to the surface of [From.Planet.GetName]. Next step is to bury it deep enough that it will stand the tests of both time and weather."
- origin.1365.a:0 "Start digging!"
+ origin.1365.a:0 "เริ่มขุด!"
  origin.1370.name:1 "Step 1 Went Smoothly"
  origin.1370.desc:0 "A generous cache of resources and technology blueprints has been buried deep beneath the surface of [From.Planet.GetName]. A beacon was placed as well, and in time we can only hope that the $NAME_ThwaaPhyr$ will find it."
  origin.1370.a:0 "May they find their way."
@@ -2533,8 +2533,8 @@
  planet_destruction.1000.desc.neutron:0 "The forces of the [FromFrom.Owner.GetName] have wiped out the primitive civilization that flourished on [From.GetName]. As a result, there is now nothing left to observe there..."
  planet_destruction.1000.A:0 "So be it."
  planet_destruction.1000.B:0 "They flail pretty well for those being flash-converted to plasma."
- job_titan_hunter:0 "Titan Hunter"
- job_titan_hunter_plural:0 "Titan Hunters"
+ job_titan_hunter:0 "นักล่าไททัน"
+ job_titan_hunter_plural:0 "นักล่าไททัน"
  job_titan_hunter_desc:0 "Fearless individuals who hunt the planet's titanic lifeforms for food. Their bones, teeth and tusks also make impressive - and valuable - trophies."
  mod_job_titan_hunter_add:0 "งาน $job_titan_hunter$"
  mod_job_titan_hunter_per_pop:0 "§G+1§! อาชีพ $job_titan_hunter$ ต่อ $VALUE$ ประชากร"
@@ -2756,11 +2756,11 @@
  pm_wenkwort_zen_desc:0 "Vast ripples appear in the regolith here. Whatever their origin, they exude a calming influence."
  pm_wenkwort_custodian:0 "Wenkwort Custodian"
  pm_wenkwort_custodian_desc:0 "In accordance with a directive from the $NAME_Gardeners$, industrialization of this botanical world has been drastically curtailed."
- job_bluelotus_technician:0 "Transmuter"
- job_bluelotus_technician_plural:0 "Transmuters"
+ job_bluelotus_technician:0 "นักแปรธาตุ"
+ job_bluelotus_technician_plural:0 "นักแปรธาตุ"
  job_bluelotus_technician_desc:0 "Specialist scientists who work on the Blue Lotus project to transmute everyday silicates into useful alloys."
- job_bluelotus_drone:0 "โดรนส่งสัญญาณ"
- job_bluelotus_drone_plural:0 "โดรนส่งสัญญาณ"
+ job_bluelotus_drone:0 "โดรนนักแปรธาตุ"
+ job_bluelotus_drone_plural:0 "โดรนนักแปรธาตุ"
  job_bluelotus_drone_desc:0 "$job_bluelotus_drone_plural$ employ experimental methods to transmute everyday silicates into useful alloys."
  mod_job_bluelotus_technician_add:0 "งาน $job_bluelotus_technician$"
  mod_job_bluelotus_drone_add:0 "งาน $job_bluelotus_drone$"
