--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -859,9 +859,9 @@
  monthly_opinion1:0 "ทัศนคติต่อเดือน: £opinion£ §G+1§!"
  monthly_opinion2:0 "ทัศนคติต่อเดือน: £opinion£ §G+2§!"
  monthly_opinion3:0 "ทัศนคติต่อเดือน: £opinion£ §G+3§!"
- mod_planet_jobs_energy_upkeep_mult:0 "Job Energy Upkeep"
- mod_planet_jobs_consumer_goods_upkeep_mult:0 "Job Consumer Goods Upkeep"
- mod_planet_structures_energy_upkeep_mult:0 "District and Building Energy Upkeep"
- mod_planet_structures_rare_crystals_upkeep_mult:0 "District and Building Rare Crystals Upkeep"
- mod_planet_structures_volatile_motes_upkeep_mult:0 "District and Building Volatile Motes Upkeep"
- mod_planet_structures_exotic_gases_upkeep_mult:0 "District and Building Exotic Gases Upkeep"
+ mod_planet_jobs_energy_upkeep_mult:0 "ค่าบำรุงรักษาอาชีพที่เป็นพลังงาน"
+ mod_planet_jobs_consumer_goods_upkeep_mult:0 "ค่าบำรุงรักษาอาชีพที่เป็นสินค้าอุปโภคบริโภค"
+ mod_planet_structures_energy_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นพลังงานกับสิ่งปลูกสร้างและเขต"
+ mod_planet_structures_rare_crystals_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นผลึกหายากกับสิ่งปลูกสร้างและเขต"
+ mod_planet_structures_volatile_motes_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นผงแร่ระเหยกับสิ่งปลูกสร้างและเขต"
+ mod_planet_structures_exotic_gases_upkeep_mult:0 "ค่าบำรุงรักษาที่เป็นก๊าซแปลกประหลาดกับสิ่งปลูกสร้างและเขต"
