--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -179,9 +179,9 @@
  MOD_PLANET_POP_ASSEMBLY_ADD:1 "การประกอบประชากรเครื่องจักรต่อเดือน"
  MOD_PLANET_POP_ASSEMBLY_MULT:1 "ความเร็วในการประกอบประชากรเครื่องจักร"
  MOD_PLANET_POP_ASSEMBLY_REDUCTION:1 "การลดความเร็วในการประกอบประชากรเครื่องจักร"
- MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD:0 "ประชากรสิ่งมีชีวิตรายเดือน"
- MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT:0 "Organic Pop Assembly Speed"
- MOD_PLANET_POP_ASSEMBLY_ORGANIC_REDUCTION:1 "Organic Pop Assembly Speed Reduction"
+ MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD:0 "การประกอบประชากรสิ่งมีชีวิตรายเดือน"
+ MOD_PLANET_POP_ASSEMBLY_ORGANIC_MULT:0 "ความเร็วในการประกอบประชากรสิ่งมีชีวิต"
+ MOD_PLANET_POP_ASSEMBLY_ORGANIC_REDUCTION:1 "ลดความเร็วในการประกอบประชากรสิ่งมีชีวิต"
  MOD_PLANET_MIGRATION_ALL_MULT:0 "การย้ายถิ่นฐานทั้งหมด"
  MOD_POP_DECLINE_FROM_EMIGRATION:0 "ประชากรปฏิเสธจากการอพยพย้ายออก"
  MOD_POP_GROWTH_FROM_IMMIGRATION:0 "เพิ่มประชากรจากการอพยพย้ายเข้า"
@@ -350,7 +350,7 @@
  MOD_PLANET_CRIME_NO_HAPPINESS_ADD:0 "ความเบี่ยงเบน"
  MOD_PLANET_CRIME_NO_HAPPINESS_MULT:0 "$MOD_PLANET_CRIME_NO_HAPPINESS_ADD$"
  MOD_PLANET_STABILITY_ADD:0 "เสถียรภาพ"
- mod_habitat_stability_add:0 "Stability on Habitats"
+ mod_habitat_stability_add:0 "เสถียรภาพบนที่อยู่อาศัยในวงโคจร"
  MOD_PLANET_STABILITY_MULT:0 "$MOD_PLANET_STABILITY_ADD$"
  MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE:1 "พลังโจมตีจากการทิ้งระเบิดจากวงโคจร"
  MOD_SHIP_ORBITAL_BOMBARDMENT_MULT:0 "$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$"
@@ -383,10 +383,10 @@
  mod_planet_structures_upkeep_mult:0 "ค่าบำรุงรักษาเขตและสิ่งปลูกสร้าง"
  mod_planet_buildings_cost_mult:0 "ค่าสิ่งปลูกสร้าง"
  mod_planet_buildings_upkeep_mult:0 "ค่าบำรุงรักษาสิ่งปลูกสร้าง"
- mod_planet_buildings_energy_upkeep_mult:0 "Building £energy£ Energy Upkeep"
+ mod_planet_buildings_energy_upkeep_mult:0 "ค่าบำรุงรักษาสิ่งปลูกสร้าง £energy£ พลังงาน"
  mod_planet_districts_cost_mult:0 "ค่าใช้จ่ายเขต"
  mod_planet_districts_upkeep_mult:0 "ค่าบำรุงรักษาเขต"
- mod_planet_districts_energy_upkeep_mult:0 "District Energy Upkeep"
+ mod_planet_districts_energy_upkeep_mult:0 "ค่าบำรุงรักษาเขตพลังงาน"
  mod_planet_districts_cities_upkeep_mult:0 "ค่าบำรุงรักษาเขตเมือง"
  mod_planet_districts_mines_cost_mult:0 "ค่าใช้จ่ายเขตเหมืองแร่"
  mod_planet_districts_farms_cost_mult:0 "ค่าใช้จ่ายเขตการเกษตร"
@@ -416,7 +416,7 @@
  mod_planet_district_mining_uncapped_build_speed_mult:0 "$mod_planet_district_mining_build_speed_mult$"
  mod_planet_district_farming_uncapped_build_speed_mult:0 "$mod_planet_district_farming_build_speed_mult$"
  mod_planet_district_generator_uncapped_build_speed_mult:0 "$mod_planet_district_generator_build_speed_mult$"
- mod_planet_building_hydroponics_farm_build_speed_mult:0 "Hydroponics Farm Build Speed"
+ mod_planet_building_hydroponics_farm_build_speed_mult:0 "ความเร็วในการสร้างฟาร์มปลูกพืชโดยไม่ใช้ดิน"
  mod_planet_building_foundry_1_build_speed_mult:0 "ความเร็วในการสร้างโรงหล่อ"
  mod_planet_building_factory_1_build_speed_mult:0 "ความเร็วในการสร้างโรงงาน"
  mod_planet_building_research_lab_1_build_speed_mult:0 "ความเร็วในการสร้างห้องวิจัย"
@@ -426,10 +426,10 @@
  mod_planet_districts_cities_cost_mult:0 "ค่าใช้จ่ายเขตเมือง"
  mod_planet_district_city_build_speed_mult:0 "ความเร็วในการสร้างเขตเมือง"
  mod_planet_buildings_strongholds_upkeep_mult:0 "ค่าบำรุงรักษาป้อมปราการ"
- mod_planet_district_arcology_industrial_speed_mult:0 "Industrial Arcology Build Speed"
- mod_planet_district_industrial_build_speed_mult:0 "Industrial District Build Speed"
+ mod_planet_district_arcology_industrial_speed_mult:0 "ความเร็วในการสร้างเขตมหานคร"
+ mod_planet_district_industrial_build_speed_mult:0 "ความเร็วในการสร้างเขตอุตสาหกรรม"
  mod_planet_district_hab_industrial_build_speed_mult:0 "ความเร็วในการสร้างเขตอุตสาหกรรมบนที่อยู่อาศัยในอวกาศ"
- mod_planet_districts_industrial_cost_mult:0 "Industrial District Cost"
+ mod_planet_districts_industrial_cost_mult:0 "ค่าเขตอุตสาหกรรม"
  mod_planet_districts_hab_industrial_cost_mult:0 "ราคาค่าเขตอุตสาหกรรมบนที่อยู่อาศัยในอวกาศ"
  mod_planet_district_arcology_civilian_industry_build_speed_mult:1 "ความเร็วในการสร้าง $district_arcology_civilian_industry$"
  mod_planet_district_arcology_arms_industry_build_speed_mult:1 "ความเร็วในการสร้าง $district_arcology_arms_industry$"
@@ -1225,7 +1225,7 @@
  mineral_rich_desc:1 "An abundance of high quality minerals in this planet's crust makes mining here a lucrative business."
  titanic_life:0 "Titanic Life"
  titanic_life_desc:0 "The lifeforms of this planet are built on a massive scale and can be incredibly dangerous even without meaning any harm."
- eat_the_titans:0 "Delicious Titans"
+ eat_the_titans:0 "ไททันแสนอร่อย"
  eat_the_titans_desc:0 "Harvesting the Titanic life for research data has had an unexpected side benefit: They taste great!"
  asteroid_belt:0 "Asteroid Belt"
  asteroid_belt_desc:0 "Perhaps this planet once had a moon which was destroyed in some calamity, or perhaps its orbital debris never fully coalesced in the first place. Whatever the cause, this planet is surrounded by a belt of small asteroids."
