--- a/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
@@ -308,7 +308,7 @@
  NAME_Garrison_Fleet:0 "Horde Garrison Fleet"
  NAME_Her_Chosen_Champions:0 "Her Chosen Champions"
  NAME_Order_of_Eternal_Night:0 "Order of Eternal Night"
- NAME_Raiding_Fleet:0 "Raiding Fleet"
+ NAME_Raiding_Fleet:0 "กองยานจู่โจม"
  NAME_Salvaged_Fleet:0 "Salvaged Fleet"
  NAME_Star_Rider_Flotilla:0 "Star Rider Flotilla"
  NAME_Twilight_Congregation:0 "Twilight Congregation"
@@ -333,7 +333,7 @@
  NAME_Young_Blood:0 "Young Blood"
  NAME_Numerous_Pirates:0 "Numerous Pirates"
  NAME_Pirate_Fleet:0 "Pirate Fleet"
- NAME_Pirate_Station:0 "Pirate Station"
+ NAME_Pirate_Station:0 "สถานีอวกาศโจรสลัด"
  NAME_Wounded_Pirates:0 "Wounded Pirates"
  NAME_Damaged_Pillager:0 "Damaged Pillager"
  NAME_Defaced_Gunmouth:0 "Defaced Gunmouth"
