--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -17,11 +17,11 @@
  PHASE_REPORT:0 "รายงานในแต่ละขั้นตอน"
  TARGET_INFO:0 "ข้อมูลของเป้าหมาย"
  SELECT_TARGET:0 "Select Target"
- OPERATION_COST:0 "Operation Cost"
+ OPERATION_COST:0 "ค่าปฏิบัติการ"
  AUTO_LAUNCH:1 "เริ่มเมื่อพร้อม"
  UPKEEP:0 "ค่าบำรุงรักษา"
  TARGET:0 "Target"
- IF_SUCCESSFUL:0 "If Successful:"
+ IF_SUCCESSFUL:0 "ถ้าสำเร็จ:"
  operative_plural_lower:0 "operatives"
  operative_drone_plural_lower:0 "operative drones"
  ESPIONAGE_OPERATION_NOT_SUFFICENT_VALUE_FORMAT:0 "$VALUE|R0$"
@@ -44,9 +44,9 @@
  ESPIONAGE_ASSIGN_ENVOY:0 "$build_spy_network_DESC$"
  ESPIONAGE_SPY_POWER_CAP:0 "Operational Capacity Cap: $CURRENT|Y$ of $MAX|Y$"
  ESPIONAGE_SPY_POWER_USAGE:0 "Operational Capacity Usage: $CURRENT|Y$ of $TOTAL|Y$"
- ESPIONAGE_OPERATION_PHASE_IN_PROGRESS:0 "Ongoing Operation"
+ ESPIONAGE_OPERATION_PHASE_IN_PROGRESS:0 "ปฏิบัติการต่อเนื่อง"
  ESPIONAGE_OPERATION_FINISHED:0 "ปฏิบัติการเสร็จสิ้น"
- ESPIONAGE_OPERATION_LOCKED:0 "Operation locked"
+ ESPIONAGE_OPERATION_LOCKED:0 "ปฏิบัติการถูกล็อก"
  ESPIONAGE_OPERATION_PHAZE_ZERO:0 "§HOperation Summary§!"
  ESPIONAGE_OPERATION_PHAZE_ZERO_DELAYED:0 "§Gคลิกเพื่อดู§!"
  ESPIONAGE_OPERATION_PHAZE_TITLE:0 "ขั้นที่ $PHASE$"
@@ -81,7 +81,7 @@
  RELATIVE_DECRYPTION_ENCRYPTION_TITLE:0 "$RELATIVE_ENCRYPTION_DECRYPTION_TITLE$"
  RELATIVE_ENCRYPTION_DEFENSIVE:1 "การถอดรหัสของพวกเขาคือ $REL$ เทียบกับการเข้ารหัสของเรา เมื่อดำเนินการจารกรรมเรา พวกเขาจะได้รับผลดังนี้:"
  RELATIVE_ENCRYPTION_OFFENSIVE:1 "การเข้ารหัสของพวกเขาคือ $REL$ เทียบกับการถอดรหัสของเรา เมื่อดำเนินการจารกรรมพวกเขา เราจะได้รับผลดังนี้:"
- SPY_NETWORK_NO_ENVOY_ASSIGNED:1 "§RRequires an §YEnvoy§! to be assigned to the Spy Network.§!"
+ SPY_NETWORK_NO_ENVOY_ASSIGNED:1 "§R- ต้องการ §Yทูต§! เพื่อกำหนดให้กับเครือข่ายสายลับ§!"
  SPY_NETWORK_ENVOY_ALREADY_ASSIGNED:0 "$TRIGGER_FAIL$ §RThis $spy_network$ already has a $role_spymaster$ assigned. See the Espionage tab for $spy_network$ information.§!"
  ESPIONAGE_OPERATION_CHANCE_CATEGORY_ASSET:0 "Success is more likely if we have an §YAsset§! assigned to this Operation, sharing the same §Yprimary category§!."
  ESPIONAGE_OPERATION_CHANCE_THEMED_ASSET:0 "Success is more likely if we have an §YAsset§! assigned to this Operation, sharing the same §Ysecondary category§!."
@@ -105,7 +105,7 @@
  op_cat_military:0 "การทหาร"
  operation_steal_technology:0 "ขโมยเทคโนโลยี"
  operation_steal_technology_desc:0 "Our operatives will infiltrate research laboratories and systems, providing our own scientists with the answers they're looking for."
- operation_steal_technology_on_success:0 "$IF_SUCCESSFUL|E$\nGain a random unknown Technology, or else an amount of Research."
+ operation_steal_technology_on_success:0 "$IF_SUCCESSFUL|E$\nได้รับเทคโนโลยีที่ไม่รู้จักแบบสุ่มหรือไม่ก็ได้รับการวิจัยจำนวนหนึ่ง"
  operation_steal_technology_enigmatic_engineering:0 "$TRIGGER_FAIL$ §RTheir technology and research methods have become indecipherable to us.§!"
  operation_steal_technology_too_recent:1 "$TRIGGER_FAIL$ §RWe must wait until at least §Y[Root.recently_stole_technology]§! before we make another attempt on their research facilities.§!"
  operation_acquire_asset:0 "จัดหาจารชนที่ใช้ในเครือข่ายสอดแนม"
@@ -137,7 +137,7 @@
  operation_gather_information:0 "รวบรวมข้อมูล"
  operation_gather_information_desc:3 "Our operatives will compile information on the §Y[This.Target.GetName]§!, delivering an §YIntel§! report when complete. This will also expose vulnerabilities that will increase our §YMaximum Infiltration Level§! for some time.\n\nAssigning an §YAsset§! to this operation may skew the results towards their interests."
  operation_gather_information_no_dlc_desc:2 "Our operatives will compile information on the §Y[This.Target.GetName]§!, delivering an §YIntel§! report when complete. This will also expose vulnerabilities that will increase our §YMaximum Infiltration Level§! for some time."
- operation_gather_information_on_success:1 "$IF_SUCCESSFUL|E$\nGain Intel and Maximum Infiltration Level on the [root.target.GetName]."
+ operation_gather_information_on_success:1 "$IF_SUCCESSFUL|E$\nรับข้อมูลและเลเวลการแทรกซึมสูงสุดใน [root.target.GetName]"
  gather_information_infiltration_5:0 "$operation_gather_information$"
  gather_information_infiltration_10:0 "$operation_gather_information$"
  gather_information_infiltration_15:0 "$operation_gather_information$"
@@ -158,13 +158,13 @@
  MOD_ESPIONAGE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_OPERATION_DIFFICULTY_ADD$"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD:0 "ความยากของปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_DIFFICULTY_ADD$"
- MOD_ESPIONAGE_OPERATION_COST_ADD:0 "Operation Cost"
+ MOD_ESPIONAGE_OPERATION_COST_ADD:0 "ค่าปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_OPERATION_COST_ADD$"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD:1 "จำเป็นต้องมีการแทรกซึมในปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_COST_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_COST_ADD$"
  MOD_ESPIONAGE_OPERATION_SKILL_ADD:0 "สกิลทักษะการปฏิบัติการ"
  MOD_ESPIONAGE_OPERATION_SKILL_MULT:0 "$MOD_ESPIONAGE_OPERATION_SKILL_ADD$"
- MOD_ESPIONAGE_OPERATION_SPEED_MULT:0 "Operation Speed"
+ MOD_ESPIONAGE_OPERATION_SPEED_MULT:0 "ความเร็วปฏิบัติการ"
  MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_ADD:0 "ค่าบำรุงรักษาปฏิบัติการของศัตรู"
  MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_MULT:0 "$MOD_ESPIONAGE_HOSTILE_OPERATION_UPKEEP_ADD$"
  MOD_INTEL_ENCRYPTION_ADD:0 "การเข้ารหัส"
@@ -223,7 +223,7 @@
  ESPIONAGE_OPERATION_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) Result is between $MIN|0Y$ and $MAX|0Y$. Adds $CLUES|0Y$ Insight(s)."
  ESPIONAGE_OPERATION_ON_ROLL_FAILED_GREATER_THAN_EQ:1 "($CHANCE|%0Y$) Result is $MIN|0Y$ or greater. Finishes stage."
  ESPIONAGE_OPERATION_ON_ROLL_FAILED_LESS_THAN_EQ:1 "($CHANCE|%0Y$) Result is $MAX|0Y$ or less. Adds $CLUES|0Y$ Insights."
- ESPIONAGE_OPERATION_SPYNETWORK_NOT_LEVEL:2 "§RRequires §YInfiltration Level§! to be $VALUE|Y$ or higher.§!"
+ ESPIONAGE_OPERATION_SPYNETWORK_NOT_LEVEL:2 "§R- ต้องการ §Yเลเวลการแทรกซึม§! $VALUE|Y$ หรือสูงกว่า§!"
  tooltip_espionage_asset_guaranteed_resume:0 "§RExpending§! our Spy Network Asset will allow progress to resume."
  tooltip_espionage_identify_decryption_encryption:0 "They may identify us if their §Y$MOD_INTEL_DECRYPTION_ADD$§! is superior to our §Y$MOD_INTEL_ENCRYPTION_ADD$§!."
  tooltip_synth_crisis_encryption_bonus:0 "Our high §Y$MOD_INTEL_ENCRYPTION_ADD$§! capability means this research will advance more quickly."
@@ -354,15 +354,15 @@
  operation.7000.a:0 "ภารกิจเสร็จสมบูรณ์"
  ESPIONAGE_OPERATION:1 "ปฏิบัติการจารกรรม $NAME|H$\nเป้าหมาย: $TARGET|Y$\nความคืบหน้า: $PROGRESS|Y%0$\nดำเนินการครั้งต่อไป: £time£ $NEXT_ROLL|Y$"
  operations:0 "ปฏิบัติการ"
- OPERATION_CATEGORIES:0 "Categories: $LIST$"
+ OPERATION_CATEGORIES:0 "ประเภท/หมวดหมู่: $LIST$"
  OPERATION_CATEGORY:0 "$CAT|Y$"
- OPERATION_DIFFICULTY:0 "Operation Difficulty: $VAL|Y$"
- OPERATION_DIFFICULTY_BASE:0 "Base: $VAL|Y$"
- OPERATION_DIFFICULTY_RELATIVE_ENCRYPTION:0 "Relative Encryption: $VAL|Y$"
- OPERATION_SKILL_BASE:0 "Base: $VAL|Y$"
+ OPERATION_DIFFICULTY:0 "ความยากของปฏิบัติการ: $VAL|Y$"
+ OPERATION_DIFFICULTY_BASE:0 "ฐาน: $VAL|Y$"
+ OPERATION_DIFFICULTY_RELATIVE_ENCRYPTION:0 "เปรียบเทียบการเข้ารหัส: $VAL|Y$"
+ OPERATION_SKILL_BASE:0 "ฐาน: $VAL|Y$"
  OPERATION_SPYPOWER_COST:1 "ต้องการ $INFILTRATION_LEVEL$: $VAL|Y$"
- OPERATION_SPYPOWER_BASE_COST:0 "Base: $VAL|Y$"
- OPERATION_OTHER_COST:0 "Operation Cost: $VAL$"
+ OPERATION_SPYPOWER_BASE_COST:0 "ฐาน: $VAL|Y$"
+ OPERATION_OTHER_COST:0 "ค่าปฏิบัติการ: $VAL$"
  INFILTRATION_LEVEL:0 "เลเวลการแทรกซึม"
  CURRENT_INFILTRATION_LEVEL:0 "เลเวลการแทรกซึมปัจจุบัน: $CUR|Y$/$MAX|Y$"
  MAX_INFILTRATION_LEVEL:0 "เลเวลการแทรกซึมสูงสุด: $MAX|Y$"
