--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -47,57 +47,57 @@
  INTEL_LEVEL_3:0 "§Gสูง§!"
  INTEL_LEVEL_4:0 "§Bเต็ม§!"
  INTEL_CONTACTS:0 "$INTEL$$VALUE|0$"
- INTEL_INFO_ascension_perks:0 "Ascension Perks"
- INTEL_INFO_authority:0 "Authority"
- INTEL_INFO_capital_location:0 "Capital Location"
- INTEL_INFO_intel_casus_belli:0 "Casus Belli"
+ INTEL_INFO_ascension_perks:0 "การยกระดับ (AP)"
+ INTEL_INFO_authority:0 "ระบอบการปกครอง"
+ INTEL_INFO_capital_location:0 "ที่ตั้งเมืองหลวง (ศูนย์กลางจักรวรรดิ)"
+ INTEL_INFO_intel_casus_belli:0 "เหตุผลทำสงคราม"
  INTEL_INFO_civics:0 "พลเมือง"
- INTEL_INFO_diplomatic_pacts:0 "Diplomatic Pacts"
- INTEL_INFO_envoy_locations:0 "Envoy Locations"
- INTEL_INFO_envoy_missions:0 "Envoy Missions"
- INTEL_INFO_envoy_names:0 "Envoy Names"
- INTEL_INFO_ethics:0 "Ethics"
- INTEL_INFO_factions:0 "Factions"
- INTEL_INFO_federation_name:0 "Federation Names"
- INTEL_INFO_governors:0 "Governors"
+ INTEL_INFO_diplomatic_pacts:0 "สนธิสัญญาทางการทูต"
+ INTEL_INFO_envoy_locations:0 "ที่ตั้งสถานทูต"
+ INTEL_INFO_envoy_missions:0 "ภารกิจของทูต"
+ INTEL_INFO_envoy_names:0 "ชื่อของทูต"
+ INTEL_INFO_ethics:0 "จริยธรรม"
+ INTEL_INFO_factions:0 "กลุ่มการเมือง"
+ INTEL_INFO_federation_name:0 "ชื่อสหพันธ์"
+ INTEL_INFO_governors:0 "ผู้ว่าการ"
  INTEL_INFO_heir:0 "รัชทายาท"
- INTEL_INFO_num_of_envoys:0 "Number of Envoys"
- INTEL_INFO_opinion_breakdown:0 "Opinion Breakdown"
- INTEL_INFO_origin:0 "Origin"
- INTEL_INFO_intel_economy_relative_power:0 "Relative Economic Power"
- INTEL_INFO_relative_fleet:0 "Relative Fleet Power"
- INTEL_INFO_relative_power:0 "Relative Power"
- INTEL_INFO_intel_tech_relative_power:0 "Relative Technologic Power"
- INTEL_INFO_relics:1 "Number of Relics Owned"
- INTEL_INFO_rivalries:0 "Rivalries"
- INTEL_INFO_ruler:0 "Ruler"
- INTEL_INFO_system_full_intel:0 "Full Intel on Systems"
- INTEL_INFO_intel_economy_systems_high:0 "High Intel on Systems"
- INTEL_INFO_intel_economy_systems_low:0 "Low Intel on Systems"
- INTEL_INFO_intel_economy_systems_med:0 "Medium Intel on Systems"
- INTEL_INFO_intel_tech_num_category:0 "Number of Researched Technologies"
- INTEL_INFO_intel_tech_current_research:0 "Currently Researched Technologies"
- INTEL_INFO_intel_tech_scientists:0 "Employed Scientists"
- INTEL_INFO_intel_tech_researched_all:0 "Researched Technologies"
- INTEL_INFO_intel_economy_colonies_low:0 "Low Intel on Colonies"
- INTEL_INFO_intel_economy_colonies_med:0 "Medium Intel on Colonies"
- INTEL_INFO_intel_economy_colonies_high:0 "High Intel on Colonies"
- INTEL_INFO_intel_economy_colonies_full:0 "Full Intel on Colonies"
+ INTEL_INFO_num_of_envoys:0 "จำนวนทูต"
+ INTEL_INFO_opinion_breakdown:0 "รายละเอียดความเห็น/ทัศนคติ"
+ INTEL_INFO_origin:0 "จุดกำเนิด"
+ INTEL_INFO_intel_economy_relative_power:0 "เปรียบเทียบอำนาจทางเศรษฐกิจ"
+ INTEL_INFO_relative_fleet:0 "เปรียบเทียบอำนาจกองยานรบ"
+ INTEL_INFO_relative_power:0 "เปรียบเทียบอำนาจโดยรวมของจักรวรรดิ"
+ INTEL_INFO_intel_tech_relative_power:0 "เปรียบเทียบอำนาจทางเทคโนโลยี"
+ INTEL_INFO_relics:1 "จำนวนวัตถุโบราณที่เป็นเจ้าของ"
+ INTEL_INFO_rivalries:0 "คู่แข่ง"
+ INTEL_INFO_ruler:0 "ผู้ปกครอง"
+ INTEL_INFO_system_full_intel:0 "ข้อมูลเต็มรูปแบบของระบบดาวต่างๆ"
+ INTEL_INFO_intel_economy_systems_high:0 "ข้อมูลระดับสูงของระบบดาวต่างๆ"
+ INTEL_INFO_intel_economy_systems_low:0 "ข้อมูลระดับต่ำของระบบดาวต่างๆ"
+ INTEL_INFO_intel_economy_systems_med:0 "ข้อมูลระดับกลางของระบบดาวต่างๆ"
+ INTEL_INFO_intel_tech_num_category:0 "จำนวนเทคโนโลยีที่วิจัยไปแล้ว"
+ INTEL_INFO_intel_tech_current_research:0 "เทคโนโลยีที่วิจัยในปัจจุบัน"
+ INTEL_INFO_intel_tech_scientists:0 "นักวิทยาศาสตร์ที่ทำงาน"
+ INTEL_INFO_intel_tech_researched_all:0 "เทคโนโลยีที่วิจัยไปแล้ว"
+ INTEL_INFO_intel_economy_colonies_low:0 "ข้อมูลระดับต่ำของอาณานิคมต่างๆ"
+ INTEL_INFO_intel_economy_colonies_med:0 "ข้อมูลระดับกลางของอาณานิคมต่างๆ"
+ INTEL_INFO_intel_economy_colonies_high:0 "ข้อมูลระดับสูงของอาณานิคมต่างๆ"
+ INTEL_INFO_intel_economy_colonies_full:0 "ข้อมูลเต็มรูปแบบของอาณานิคมต่างๆ"
  INTEL_INFO_intel_empire_sprawl:1 "$EMPIRE_SIZE$"
- INTEL_INFO_intel_economy_civships_locations:0 "Location of Civilian Ships"
- INTEL_INFO_intel_economy_civships_orders:0 "Current Orders of Civilian Ships"
- INTEL_INFO_intel_military_admirals:0 "Employed Admirals"
- INTEL_INFO_intel_military_armies:0 "Location of Armies"
- INTEL_INFO_intel_military_fleets:0 "Location of Military Fleets"
- INTEL_INFO_intel_military_fleet_details:1 "Ship Details"
- INTEL_INFO_intel_military_fleet_orders:0 "Current Orders of Military Fleets"
- INTEL_INFO_intel_military_generals:0 "Employed Generals"
- INTEL_INFO_intel_military_starbases:0 "Location of Starbases"
- INTEL_INFO_galactic_community_vote_breakdown:0 "Galactic Community Vote Rationale"
- INTEL_INFO_intel_military_ai_prepare_war:0 "Imminent Invasion Plans"
- INTEL_INFO_resource_production:0 "Subject Resource Production"
- INTEL_INFO_specialist_subject_tier:0 "Specialist Tier"
- INTEL_INFO_diplomatic_pacts_secret:0 "Secret Diplomatic Pacts"
+ INTEL_INFO_intel_economy_civships_locations:0 "ที่ตั้งของยานพลเรือน"
+ INTEL_INFO_intel_economy_civships_orders:0 "คำสั่งปัจจุบันของยานพลเรือน"
+ INTEL_INFO_intel_military_admirals:0 "พลเรือเอกที่ทำงาน"
+ INTEL_INFO_intel_military_armies:0 "ที่ตั้งกองทัพ"
+ INTEL_INFO_intel_military_fleets:0 "ที่ตั้งกองยานรบ"
+ INTEL_INFO_intel_military_fleet_details:1 "รายละเอียดของยาน"
+ INTEL_INFO_intel_military_fleet_orders:0 "คำสั่งปัจจุบันของกองยานรบ"
+ INTEL_INFO_intel_military_generals:0 "พลเอกที่ทำงาน"
+ INTEL_INFO_intel_military_starbases:0 "ที่ตั้งของฐานอวกาศ"
+ INTEL_INFO_galactic_community_vote_breakdown:0 "เหตุผลของการโหวตในประชาคมกาแลกติก"
+ INTEL_INFO_intel_military_ai_prepare_war:0 "แผนการบุกใกล้เข้ามา"
+ INTEL_INFO_resource_production:0 "การผลิตทรัพยากรของบริวาร"
+ INTEL_INFO_specialist_subject_tier:0 "ระดับของผู้เชี่ยวชาญ"
+ INTEL_INFO_diplomatic_pacts_secret:0 "สนธิสัญญาลับทางการทูต"
  INTEL_FROM_PACT_STATIC:0 "§YDiplomatic Pacts§! may grant additional §YIntel§! on the other party, regardless of the current §YIntel Level§!."
  INTEL_FROM_PACT:0 "จาก $PACT|Y$:\n$INTEL$"
  INTEL_MONTHLY_INCREASE:0 "ข้อมูลข่าวกรองกำลังมีการเปลี่ยนแปลงในอัตรา $VALUE|G$ ต่อเดือน จนถึงขั้นสูงสุดที่ $TARGET|Y$"
@@ -121,11 +121,11 @@
  CANNOT_INSPECT_NO_INTEL:1 "We do not have enough Intel to know their ship design."
  INTEL_NEGATIVE:1 "Intel on $TARGET|R$ is falling"
  ACTION_EMBASSY_OFFER_DESC:0 "§H[Actor.GetName]§! wants us to establish mutual embassies."
- INTEL_HOW_TO_GAIN:1 "§E§YIntel§! can be increased by improving §YTrust§!, Spy Network §YInfiltration§!, or forming deeper §YDiplomatic Pacts§! with the other empire.\n\n§YGather Information§! Operations can also provide temporary Intel Reports.§!"
+ INTEL_HOW_TO_GAIN:1 "§E§Yข้อมูลข่าวกรอง§! เพิ่มขึ้นได้ด้วยการปรับปรุง §Yความเชื่อใจ§!, §Yการแทรกซึม§! เครือข่ายสายลับ หรือการทำ §Yสนธิสัญญาทางการทูต§! ที่ลึกขึ้นกับจักรวรรดิอื่น\n\nปฏิบัติการ §Yรวบรวมข้อมูล§! ยังสามารถทำให้ได้รับรายงานข้อมูลแบบชั่วคราวได้อีกด้วย§!"
  BASE_INTEL_LEVEL:0 "เลเวล: $LEVEL$"
  INTEL_REPORT_DETAILS:0 "Intel Report: $LEVEL$$EXPIRATION$"
  INTEL_REPORT_EXPIRATION:0 " (£time£ $DAYS|Y$)"
- INTEL_CATEGORY_INFO_BREAKDOWN:1 "§HAvailable Intel:§!\n$BREAKDOWN$"
+ INTEL_CATEGORY_INFO_BREAKDOWN:1 "§Hข้อมูลที่มี:§!\n$BREAKDOWN$"
  INTEL_CATEGORY_TITLE:0 "ข้อมูล$CATEGORY$"
  FC_RELATION_LABEL_UNKNOWN:0 "ไม่ทราบ"
  FC_RELATION_LABEL_ISOLATIONIST:0 "Isolationist"
