--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -35,9 +35,9 @@
  MESSAGE_NO_OFFSPRING_DESC:0 "We currently do not have a drone assigned to a §YOffspring Nest§! on $PLANET|Y$, leading to a decrease in worker drone productivity."
  MESSAGE_FINAL_OFFSPRING_SHIP_TITLE:0 "Last Offspring Ship Defeated"
  MESSAGE_FINAL_OFFSPRING_SHIP_DESC:0 "Our last §YOffspring Ship§! in the $SYSTEM|Y$ system has fallen, leaving our fleets without proper command."
- job_offspring_drone:0 "Offspring Drone"
- job_offspring_drone_plural:0 "Offspring Drones"
- mod_job_offspring_drone_add:0 "$job_offspring_drone$ Jobs"
+ job_offspring_drone:0 "โดรนลูก"
+ job_offspring_drone_plural:0 "โดรนลูก"
+ mod_job_offspring_drone_add:0 "งาน $job_offspring_drone$"
  job_offspring_drone_desc:0 "The administrator of the entire planet resides here. It is through Offspring drones that the Progenitor enacts their grand design."
  job_offspring_drone_effect_desc:1 "£job_spawning_drone£ $job_offspring_drone_plural$ increase £mod_planet_amenities_no_happiness_add£ §Y$PLANET_AMENITIES_TITLE$§! and £mod_planet_pop_assembly_mult£ §Y$MOD_PLANET_POP_ASSEMBLY_ORGANIC_ADD$§!, spawn §Y$offspring_defense_plural$§!, and provide a £mod_planet_jobs_simple_drone_produces_mult£ §G+10%§! increase in §Y$pop_cat_simple_drone$ output§!."
  building_offspring_nest:0 "Offspring Nest"
