--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -549,11 +549,11 @@
  mod_shipclass_mining_station_build_speed_mult:0 "Mining Station Build Speed"
  holding_splinter_hive_modifier:0 "Splinter Hive Symbiotic Link"
  holding_noble_vacation_home_modifier:0 "Relaxed Nobles"
- mod_planet_jobs_unity_upkeep_mult:0 "£unity£ $unity$ upkeep from £job£ Jobs"
+ mod_planet_jobs_unity_upkeep_mult:0 "ค่าบำรุงรักษา £unity£ $unity$จาก £job£ งาน"
  MOD_SUBJECT_TECH_COST_MULT:0 "Technology Research Cost"
- mod_planet_refiners_exotic_gases_produces_mult:0 "£job_gas_refiner£ [Root.Refiners] Output"
- mod_planet_translucers_rare_crystals_produces_mult:0 "£job_translucer£ [Root.Translucers] Output"
- mod_planet_chemists_volatile_motes_produces_mult:0 "£job_chemist£ [Root.Chemists] Output"
+ mod_planet_refiners_exotic_gases_produces_mult:0 "£job_gas_refiner£ ผลผลิต [Root.Refiners]"
+ mod_planet_translucers_rare_crystals_produces_mult:0 "£job_translucer£ ผลผลิต [Root.Translucers]"
+ mod_planet_chemists_volatile_motes_produces_mult:0 "£job_chemist£ ผลผลิต [Root.Chemists]"
  divided_patronage:0 "Divided Patronage"
  divided_patronage_desc:0 "Our Overlord's attention is divided among too many subjects."
  feudal_lord:0 "Feudal Lord"
