--- a/mod/thmod/localisation/english/plantoids_l_english.yml
+++ b/mod/thmod/localisation/english/plantoids_l_english.yml
@@ -82,8 +82,8 @@
  mod_job_catalytic_technician_add:0 "งาน$job_catalytic_technician$"
  mod_job_catalytic_technician_per_pop:0 "§G+1§! อาชีพ$job_catalytic_technician$ ต่อ $VALUE$ ประชากร"
  mod_job_catalytic_technician_per_pop_short:0 "\n§G+1§! £mod_job_catalytic_technician_add£ ต่อ $VALUE$ £pop£"
- job_catalytic_drone:0 "Catalytic Drone"
- job_catalytic_drone_plural:0 "Catalytic Drones"
+ job_catalytic_drone:0 "โดรนเร่งปฏิกิริยา"
+ job_catalytic_drone_plural:0 "โดรนเร่งปฏิกิริยา"
  job_catalytic_drone_desc:0 "Valuable organic compounds are processed into durable alloys for naval development and advanced construction by highly-specialized Catalytic Drones."
  job_catalytic_drone_effect_desc:0 "£job_catalytic_drone£ $job_catalytic_drone_plural$ เปลี่ยน £food£ §Y$food$§! เป็น £alloys£ §Y$alloys$§!"
  mod_job_catalytic_drone_add:0 "งาน$job_catalytic_drone$"
