--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -154,7 +154,7 @@
  tr_harmony_finish:0 "วัฒนธรรมความปรองดองสำเร็จ"
  tradition_synchronicity:0 "ความสอดคล้องกัน"
  tradition_synchronicity_desc:0 "ความสามัคคีของจิตใจก่อให้เกิดเอกภาพของความมุ่งหมาย เราต้องพยายามดำเนินการให้สอดคล้องกันในทุกความพยายาม"
- tr_synchronicity_adopt:0 "Synchronicity Traditions"
+ tr_synchronicity_adopt:0 "วัฒนธรรมความสอดคล้องกัน"
  tr_synchronicity_cloned_organs:0 "โคลนอวัยวะ"
  tr_synchronicity_cloned_organs_delayed:0 "The cloning vats mass-produce the more frequently consumed organs like hearts and lungs, increasing the usable lifespan of high-priority drones."
  tr_synchronicity_kinship_gestalt:0 "การเชื่อมต่อควบคุมเจ้าหน้าที่ (การซิงค์)"
