--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -11,16 +11,16 @@
  IS_AI_CONTROLLED:0 "Is AI controlled"
  TRIGGER_CAPITAL:0 "Capital"
  TRIGGER_CAPITAL_STAR:0 "Capital Star"
- TRIGGER_OWNER:1 "Owner"
+ TRIGGER_OWNER:1 "เจ้าของ"
  TRIGGER_CONTROLLER:1 "Controller"
- TRIGGER_OWNER_SPECIES:0 "Owner Species"
+ TRIGGER_OWNER_SPECIES:0 "เจ้าของเผ่าพันธุ์"
  TRIGGER_SPECIES:0 "Species"
  TRIGGER_SPACE_OWNER:0 "Space Owner"
  TRIGGER_LEADER:0 "Leader"
  TRIGGER_HOME_PLANET:0 "Homeworld"
- TRIGGER_BRANCH_OFFICE_OWNER:0 "Branch Office Owner"
+ TRIGGER_BRANCH_OFFICE_OWNER:0 "เจ้าของสำนักงานสาขา"
  TRIGGER_FLEET:0 "กองยาน"
- TRIGGER_POP_FACTION:0 "Faction"
+ TRIGGER_POP_FACTION:0 "กลุ่มการเมือง"
  TRIGGER_SECTOR:0 "เซกเตอร์"
  TRIGGER_TARGET:0 "เป้าหมาย"
  TRIGGER_SPYNETWORK:0 "เครือข่ายสอดแนม"
@@ -260,8 +260,8 @@
  HAS_NOT_NUM_MODIFIERS:1 "Number of Modifiers is NOT $COMPARATOR$ $NUM|Y$"
  HAS_ANY_STRATEGIC_RESOURCE:0 "Has a Strategic Resource"
  HAS_NOT_ANY_STRATEGIC_RESOURCE:0 "ไม่มีทรัพยากรเชิงยุทธศาสตร์"
- IS_FACTION:0 "Is a Faction"
- IS_NOT_FACTION:0 "Is NOT a Faction"
+ IS_FACTION:0 "เป็นกลุ่มการเมือง"
+ IS_NOT_FACTION:0 "ไม่เป็นกลุ่มการเมือง"
  HAS_NUM_FREE_LEADER_SLOTS:0 "Number of Free Leader Slots is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_FREE_LEADER_SLOTS:0 "Number of Free Leader Slots is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_FREE_ARMY_SLOTS:0 "Number of free Army Slots is $COMPARATOR$ $NUM|Y$"
@@ -1121,7 +1121,7 @@
  SET_EVENT_LOCKED_NO:0 "$FLEET|Y$ is unlocked."
  CLEAR_FLEET_ORDERS:0 "Clears orders of $FLEET|Y$."
  ORDER_FORCED_RETURN:0 "Forces $FLEET|Y$ to return to safe space."
- DECLARE_WAR_EFFECT:1 "$FIRST|Y$ declares war on $SECOND|Y$.\n"
+ DECLARE_WAR_EFFECT:1 "$FIRST|Y$ ประกาศสงครามกับ $SECOND|Y$\n"
  ADD_CLAIMS_EFFECT:0 "$COUNTRY|Y$ lays claim to $SYSTEM|Y$."
  REMOVE_CLAIMS_EFFECT:0 "$COUNTRY|Y$ loses their claim to $SYSTEM|Y$."
  JOIN_WAR_EFFECT:0 "$FIRST|Y$ joins $SECOND|Y$ as an ally in their wars."
@@ -1228,7 +1228,7 @@
  LEADER_NOT_GENDER_TRIGGER:0 "$LEADER|Y$ ไม่เป็น $GENDER|Y$"
  SPECIES_GENDER_TRIGGER:0 "Species has $GENDER|Y$ gender"
  SPECIES_NOT_GENDER_TRIGGER:0 "Species does NOT have $GENDER|Y$ gender"
- POP_NOT_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ is NOT in any Pop Faction"
+ POP_NOT_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ ไม่ได้อยู่ในกลุ่มการเมืองใดๆ"
  POP_MEMBER_OF_ANY_FACTION_TRIGGER:0 "$POP|Y$ is in a Pop Faction"
  POP_NOT_MEMBER_OF_FACTION_TRIGGER:0 "$POP|Y$ ไม่ได้เป็นสมาชิกของ $FACTION|Y$"
  POP_MEMBER_OF_FACTION_TRIGGER:0 "$POP|Y$ is a member of $FACTION|Y$"
@@ -1285,7 +1285,7 @@
  REPAIR_PERCENTAGE_EFFECT:0 "Repair $VALUE|Y%$ Percent Hitpoints"
  SET_SPECIES_IDENTITY_EFFECT:0 "$SPECIES|Y$ are now considered to be the same species as the $IDENTITY|Y$"
  SET_SPECIES_IDENTITY_EFFECT_NEW:0 "$SPECIES|Y$ are now considered to be a unique species"
- POP_FACTION:0 "Faction"
+ POP_FACTION:0 "กลุ่มการเมือง"
  SET_EMPIRE_NAME_EFFECT:0 "Is now known as $NEW_NAME|Y$"
  SET_EMPIRE_FLAG_EFFECT:0 "A new flag of the Empire is inaugurated."
  SET_PLANET_NAME_EFFECT:0 "Is now known as $NEW_NAME|Y$"
@@ -1557,7 +1557,7 @@
  HAS_NOT_NUM_SECTORS:0 "Number of Sectors is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_SECTORS:0 "Number of Sectors is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_UNCLEARED_BLOCKERS:0 "Numbers of uncleared blockers is NOT $COMPARATOR$ $NUM|Y$"
- HAS_NUM_UNCLEARED_BLOCKERS:0 "Number of uncleared blockers is $COMPARATOR$ $NUM|Y$"
+ HAS_NUM_UNCLEARED_BLOCKERS:0 "จำนวนสิ่งกีดขวางที่ยังไม่ได้เคลียร์ $COMPARATOR$ $NUM|Y$"
  any_owned_sector_trigger:1 "Any owned sector"
  effect_random_owned_sector:0 "Random owned sector"
  effect_every_owned_sector:0 "Every owned sector"
