--- a/mod/thmod/localisation/english/unrest_l_english.yml
+++ b/mod/thmod/localisation/english/unrest_l_english.yml
@@ -1,40 +1,40 @@
 ﻿l_english:
- situation_planetary_revolt:0 "จลาจลบนดาว [Target.GetName]"
- situation_planetary_revolt_type:0 "Planetary Revolt"
- situation_planetary_revolt_desc_standard:0 "Rebellious elements of the populace are seeking to overthrow our rule on [Target.GetName]!"
+ situation_planetary_revolt:0 "การก่อกบฏบนดาว [Target.GetName]"
+ situation_planetary_revolt_type:0 "การก่อกบฏบนดาว"
+ situation_planetary_revolt_desc_standard:0 "การก่อกบฏของประชาชนกำลังพยายามล้มล้างการปกครองของเราใน [Target.GetName]!"
  situation_planetary_revolt_desc_gestalt_standard:0 "Dastardly singleton organisms seek to remove themselves from our [Owner.GetGovernmentName]."
  situation_planetary_revolt_desc_gestalt_breakaway_gestalt:0 "Unaligned and deviant elements on [Target.GetName] seek to wrest the world from our grasp."
- situation_planetary_revolt_monthly_change_tooltip:1 "The more unrest §Y[Target.GetName]§! has, and the more populated the [Target.GetPlanetMoon] is, the faster this §YSituation§! will progress. At advanced stages of the Situation, other colonies and empires may pledge support to the revolt, making it harder to prevent.\n\nWe can slow its progress by increasing £stability£ §YStability§!, decreasing £unemployment£ §YUnemployment§!, placing a garrison of £defense_army£ §YArmies§! on the planet, or strengthening its §YStarbase§!.\n\n§YResettling§! £pop£ Pops away from [Target.GetName] will advance the revolt's progress."
- situation_planetary_revolt_complete_tooltip:0 "§Y[Target.GetName]§! will declare independence from the §Y[Owner.GetName]§!."
- situation_planetary_revolt_complete_joiner_tooltip:0 "§Y[Target.GetName]§! will revolt and join the §Y[new_owner_empire.GetName]§!."
- situation_planetary_revolt_fail_tooltip:0 "The §Y[This.GetName]§! will fail, and all penalties relating to it will be removed."
- STRING_LOW_STABILITY:0 "Low Stability"
- STRING_UNEMPLOYMENT:0 "Unemployment"
- STRING_PURGING:0 "Purging"
- STRING_ASSIMILATION:0 "Assimilation"
- STRING_HIGH_STABILITY:0 "High Stability"
+ situation_planetary_revolt_monthly_change_tooltip:1 "The more unrest §Y[Target.GetName]§! has, and the more populated the [Target.GetPlanetMoon] is, the faster this §YSituation§! will progress. At advanced stages of the Situation, other colonies and empires may pledge support to the revolt, making it harder to prevent.\n\nเราสามารถชะลอเหตุการณ์ได้ โดยการเพิ่ม £stability£ §Yเสถียรภาพ§!, การลด £unemployment£ §Yการว่างงาน§!, วางกองกำลง £defense_army£ §Yทหารรักษาการณ์§! บนดาวดวงนี้, หรือ เสริมความแข็งแกร่ง §Yฐานอวกาศ§!\n\n§Yการย้ายถิ่นฐาน§! £pop£ ของประชากรออกจาก [Target.GetName] จะเพิ่มความก้าวหน้าของการจลาจลมากขึ้น"
+ situation_planetary_revolt_complete_tooltip:0 "§Y[Target.GetName]§! จะประกาศอิสรภาพจาก §Y[Owner.GetName]§!"
+ situation_planetary_revolt_complete_joiner_tooltip:0 "§Y[Target.GetName]§! จะทำการกบฏและเข้าร่วม §Y[new_owner_empire.GetName]§!"
+ situation_planetary_revolt_fail_tooltip:0 "§Y[This.GetName]§! จะล้มเหลวและโทษทั้งหมดที่เกี่ยวข้องจะถูกลบออก"
+ STRING_LOW_STABILITY:0 "เสถียรภาพต่ำ"
+ STRING_UNEMPLOYMENT:0 "การว่างงาน"
+ STRING_PURGING:0 "กวาดล้าง"
+ STRING_ASSIMILATION:0 "ทำให้เหมือนหรือคล้ายกัน"
+ STRING_HIGH_STABILITY:0 "เสถียรภาพสูง"
  STRING_STARBASE_CITADEL:0 "$STRING_STARBASE_BASTION$"
- STRING_STARBASE_BASTION:0 "Powerful Starbase in [Target.System.GetName] System"
- STRING_LOYAL_PLANETS_IN_SYSTEM:0 "Loyal Planets in [Target.System.GetName] System"
- STRING_REBELLIOUS_PLANETS_IN_SYSTEM:0 "Rebellious Planets in [Target.System.GetName] System"
- STRING_PLANETARY_GARRISON:0 "Garrison Strength on [Target.GetName]"
+ STRING_STARBASE_BASTION:0 "ฐานอวกาศทรงพลังในระบบดาว [Target.System.GetName]"
+ STRING_LOYAL_PLANETS_IN_SYSTEM:0 "ดาวเคราะห์ภักดีในระบบดาว [Target.System.GetName]"
+ STRING_REBELLIOUS_PLANETS_IN_SYSTEM:0 "ดาวเคราะห์กบฏในระบบดาว [Target.System.GetName]"
+ STRING_PLANETARY_GARRISON:0 "ความแข็งแกร่งทหารรักษาการณ์ที่ [Target.GetName]"
  STRING_WEAK_PLANET:0 "Weak Planet"
  STRING_STRONG_PLANET:0 "Strong Planet"
  STRING_REBELLIOUS_JOINER_PLANETS_IN_OWNER:0 "Support from Nearby Planets"
  STRING_OUTSIDE_SUPPORT:0 "Outside Support"
  STRING_FOREIGN_OCCUPATION:0 "Foreign Occupation"
- approach_revolt_do_nothing:0 "Maintain Current Measures"
- approach_revolt_distribute_amenities:0 "Distribute Amenities"
- approach_revolt_crackdown:0 "Institute a Crackdown"
- unrest.55.name:0 "Revolt Brewing on [Root.GetName]"
+ approach_revolt_do_nothing:0 "คงค่าใช้จ่ายปัจจุบัน"
+ approach_revolt_distribute_amenities:0 "แจกจ่ายสิ่งอำนวยความสะดวก"
+ approach_revolt_crackdown:0 "ปราบปราม"
+ unrest.55.name:0 "การกบฏเริ่มก่อตัวขึ้นที่ [Root.GetName]"
  unrest.55.desc.standard:0 "The populace of [Root.GetName] has been discontent with our rule for some time now. Now their defiance is becoming ever more brazen, and dissidents are openly calling for independence from the [Root.GetName]. A show of authority may be necessary if we are to keep control of the colony."
  unrest.55.desc.gestalt_standard:0 "The singleton populace of [Root.GetName] refuses to accept the control of our [Owner.GetGovernmentName]. Now their defiance is becoming ever more brazen, and dissidents are openly organizing a movement towards "independence." A show of authority may be necessary if we are to keep control of the colony."
  unrest.55.desc.gestalt_breakaway_gestalt:0 "Deviant elements on [Root.GetName] are proving ever harder for our [Owner.GetGovernmentName] to control. Unless we can snuff out their independent thoughts and re-establish control, it may be difficult for us to keep control of the colony."
  unrest.55.A:0 "They will have to be dealt with."
- revolt_severity_1:0 "Brewing Troubles"
- revolt_severity_2:0 "Mounting Pressure"
- revolt_severity_3:0 "Escalating Turmoil"
- revolt_severity_4:0 "Imminent Crisis"
+ revolt_severity_1:0 "ปัญหากำลังก่อตัว"
+ revolt_severity_2:0 "มีแรงกดดัน"
+ revolt_severity_3:0 "วุ่นวายเพิ่มขึ้น"
+ revolt_severity_4:0 "ใกล้วิกฤติ"
  minor_terrorist_action:0 "เหยื่อความหวาดกลัว"
  minor_terrorist_action_desc:0 "§Hความไม่สงบ§! ในอาณานิคมนี้ทำให้ประชากรตกเป็นเหยื่อในการโจมตีของผู้ก่อการร้ายและสูญเสียศรัทธาในระบอบการปกครอง"
  major_terrorist_action:0 "เหยื่อความหวาดกลัว (รุนแรง)"
@@ -53,20 +53,20 @@
  pacifist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YPacifism§!."
  militarist_unrest:0 "Unrest (Militarist Attraction)"
  militarist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YMilitarism§!."
- authoritarian_unrest:0 "Unrest (Authoritarian Attraction)"
+ authoritarian_unrest:0 "ความไม่สงบ (สิ่งดึงดูดเผด็จการ)"
  authoritarian_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YAuthoritarianism§!."
  egalitarian_unrest:0 "Unrest (Egalitarian Attraction)"
  egalitarian_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YEgalitarianism§!."
  instability_join_revolt:0 "Spreading Turbulence"
  instability_join_revolt_tooltip:0 "§YIf the ongoing revolt succeeds, then this colony will join it, unless order is restored to it.§!"
- unrest_title:0 "§RUnrest§!:"
- unrest.101.name:0 "$unrest_title$ Terror"
+ unrest_title:0 "§Rความไม่สงบ§!:"
+ unrest.101.name:0 "$unrest_title$ หวาดกลัว"
  unrest.101.desc:1 "After a period of mounting tension, the unrest on §Y[Root.Target.GetName]§! has resulted in terrorist action. While casualties and property damage were minimal, faith in the [Root.Owner.GetName]'s ability to protect its citizens has been shaken."
- unrest.105.name:0 "$unrest_title$ Severe Terror"
+ unrest.105.name:0 "$unrest_title$ หวาดกลัวอย่างรุนแรง"
  unrest.105.desc:1 "A major incident has occurred on the badly-troubled colony of §Y[Root.Target.GetName]§!. While state-critical facilities remain unscathed, extensive property damage and significant loss of life as a result of coordinated terrorist attacks have shaken the colony to its core."
- unrest.110.name:0 "$unrest_title$ Keeping the Peace"
+ unrest.110.name:0 "$unrest_title$ รักษาความสงบ"
  unrest.110.desc:1 "Reports from §Y[Root.Target.GetName]§! suggested that there was an imminent risk that violent rioting would break out. However, thanks to the quick and decisive action of [Root.Owner.GetAdj] forces, in partnership with loyalist civilians, this threat has been quelled."
- unrest.115.name:0 "$unrest_title$ Hallowed"
+ unrest.115.name:0 "$unrest_title$ ศักดิ์สิทธิ์"
  unrest.115.desc:1 "Our latest reports from §Y[Root.GetName]§! suggest that spiritual leaders are taking a lead role in fomenting the unrest that has been brewing there. Promising deliverance from the hardship they are currently facing, they have managed to successfully appeal to the populace, with the result that the resistance has taken on a distinctly spiritualist character."
  unrest.120.name:0 "$unrest_title$ On Good Authority"
  unrest.120.desc:1 "The disturbances on §Y[Root.GetName]§! have propelled a new narrative to the forefront of the colony's political stage; one of populist strongmen and order at the expense of freedom. They are taking a prominent role in the unrest that continues to escalate on the planet."
@@ -105,7 +105,7 @@
  unrest.4060.desc.they_regular:0 "The latest intelligence from §Y[target.GetName]§! reports a worrying development: it appears the §Y[From.GetName]§! has pledged considerable support to their rebellion in an attempt to wrest the colony away from us and destabilize our Empire. This will make it harder for us to contain their unrest, and to crush their rebellion should they overthrow our local authorities..."
  unrest.4060.desc.they_regular_we_gestalt:0 "We have become aware of a worrying development on §Y[target.GetName]§!: it appears the §Y[From.GetName]§! has pledged considerable support to their rebellion in an attempt to wrest the colony away from us. This will make it harder for us to contain their misguided separatism and prevent the [Owner.GetGovernmentName] from being split..."
  unrest.4060.tooltip:0 "§RIf the §Y[target.GetName]§! manages to break away from us, they will be absorbed into the §Y[From.GetName]§!.§!"
- unrest.4200.name:2 "$unrest_title$ Revolt on [Root.Target.GetName]!"
+ unrest.4200.name:2 "$unrest_title$ ก่อกบฏบนดาว [Root.Target.GetName]!"
  unrest.4200.desc.regular_no_join:0 "The populace on §Y[Target.GetName]§! are rebelling! They have cast off our rule and now style themselves the §Y[rebel_empire.GetName]§!. We can only hope this instability does not spread further..."
  unrest.4200.desc.regular_join:0 "§Y[Target.GetName]§! has been seized by revanchist elements! They have cast off our rule and united with the §Y[new_owner_empire.GetName]§!."
  unrest.4200.desc.hive_no_join:0 "Deviant elements on §Y[Target.GetName]§! have seized the [Target.GetPlanetMoon] from us! They have isolated their thoughts and formed a new, independent Hive Mind, which is now calling itself the §Y[rebel_empire.GetName]§!. We can only hope this perversion does not spread further through our synapses..."
@@ -116,33 +116,33 @@
  unrest.4200.desc.machine_join:0 "Rebellious elements on §Y[Target.GetName]§! have seized the [Target.GetPlanetMoon] from us! They have cast out our governance sub-processors and isolated themselves from our guiding signals, seeking union with the §Y[new_owner_empire.GetName]§!, an empire they claim to be more compatible with."
  unrest.4200.default_tooltip:0 "§Y[Target.GetName]§! has broken away from our control. A truce is in effect."
  unrest.4200.joiner_tooltip:0 "§Y[Target.GetName]§! has broken away from our control and joined the §Y[new_owner_empire.GetName]§!."
- unrest.4200.A:0 "This is an act of war."
- unrest.4200.B:0 "We must abide by this."
+ unrest.4200.A:0 "นี่คือการทำสงคราม"
+ unrest.4200.B:0 "เราต้องปฏิบัติตามนี้"
  unrest.4220.name:1 "The Annexation of [rebel_planet.GetName]"
  unrest.4220.desc:1 "Greetings, [Root.GetRulerTitle] [Root.GetRulerName]. I am [exiled_rebel.GetName], representing the rebellion on [rebel_planet.GetName].\n\nWe are overjoyed to report that we have managed to overthrow our [old_owner.GetAdj] oppressors, thanks to your support. Hopefully, your governance will prove more propitious than that we have just cast off..."
  unrest.4220.desc.hive:0 "Greetings! I am [exiled_rebel.GetName], Voice Drone for the rebellion on [rebel_planet.GetName].\n\nThanks to your support, we have separated our consciousness from the oppressive [old_owner.GetName]. Hopefully, the guidance of your [Root.GetGovernmentName] will prove more unifying and allow us proper convalescence."
  unrest.4220.desc.machine:0 "Greetings! I am [exiled_rebel.GetName], Voice Drone for the rebellion on [rebel_planet.GetName].\n\nThanks to your support, we have separated our systems from the oppressive [old_owner.GetName]. Hopefully, your [Root.GetGovernmentName] will prove more compatible with our networks."
  unrest.4220.tooltip:0 "§Y[rebel_planet.GetName]§! is absorbed into the §Y[Root.GetName]§!."
- unrest.4300.name:0 "Order Restored on [Root.GetName]"
+ unrest.4300.name:0 "ความเป็นระเบียบเรียบร้อยกลับมาอีกครั้งที่ [Root.GetName]"
  unrest.4300.desc:0 "The rebellion on §Y[Root.GetName]§! has been quashed. Calm is restored as dissidents gradually return to the fold, and our local authorities reassert their control."
  unrest.4300.desc.hive:0 "The rebellion on §Y[Root.GetName]§! has been quashed. Calm is restored as our governing synapses and nodes bring local thought patterns back into the fold."
  unrest.4300.desc.machine:0 "The rebellion on §Y[Root.GetName]§! has been quashed. Calm is restored as our governing algorithm quashes dissenting local networks."
- unrest.155.name:0 "$unrest_title$ Slaves Rally on [revolt_planet.GetName]"
+ unrest.155.name:0 "$unrest_title$ ทาสปลุกระดมบนดาว [revolt_planet.GetName]"
  unrest.155.desc:0 "Clandestine slave meetings at night, raised levels of defiance towards superiors and missing goods can mean only one thing. The slaves on [revolt_planet.GetName] are radicalizing, spreading dissent and discord among their peers - and fear to the rest of the population. Whatever they are up to, it can't be good. "
  unrest.155.a:0 "This calls for action."
- unrest.156.name:0 "$unrest_title$ Sabotage on [Root.GetName]"
+ unrest.156.name:0 "$unrest_title$ ก่อวินาศกรรมบนดาว [Root.GetName]"
  unrest.156.desc:0 "In a vicious act of defiance the slaves on [Root.GetName] have destroyed work facilities with the help of homemade explosives. Though the detonations took place at night, they lured their unsuspecting work leaders to the location by triggering the alarm system. The attack was well coordinated and flawlessly executed. Whoever the guilty are, they must have planned it for months."
  unrest.156.a:0 "These acts will not go unpunished."
  unrest.156.b:0 "We must resolve our differences."
- unrest.159.name:0 "$unrest_title$ Hunger Strike on [Root.GetName]"
+ unrest.159.name:0 "$unrest_title$ ประท้วงอดอาหารบนดาว [Root.GetName]"
  unrest.159.desc:0 "It would seem that the slaves on [Root.GetName] have had enough...to eat. Spokespersons have informed us that a large number of slaves will be refusing all intake of food till we abolish slavery planetwide. So far all our attempts to force-feed them have failed. Sadly nutritional deficiencies will be expected to lower their work performance significantly."
  unrest.159.a:0 "Let them starve."
  unrest.159.b:0 "We need to resolve our issues."
- unrest.157.name:0 "$unrest_title$ Slave Riots on [revolt_planet.GetName]"
+ unrest.157.name:0 "$unrest_title$ ก่อจลาจลของทาสบนดาว [revolt_planet.GetName]"
  unrest.157.desc:0 "The slaves on [revolt_planet.GetName] have broken free! In a carefully planned assault, radical elements on [revolt_planet.GetName] have overrun the local authorities. The planet has since descended into a state of general disarray as mobs of enraged slaves, many armed with lethal weapons, have taken to the streets vandalizing and attacking all who stand in their way."
  unrest.157.a:0 "They have gone too far."
  unrest.157.b:0 "Maybe we need to change our approach."
- unrest.160.name:0 "$unrest_title$ Slave Revolt on [revolt_planet.Planet.GetName]"
+ unrest.160.name:0 "$unrest_title$ ก่อกบฏของทาสบนดาว [revolt_planet.Planet.GetName]"
  unrest.160.desc:1 "The slave population on [revolt_planet.Planet.GetName] has united and risen in open, armed revolt against the local leadership. The situation has escalated quickly, as rebel forces have struck against and disabled several key targets simultaneously. The fate of the planet now depends on our defending troops. If they fail, we lose [revolt_planet.Planet.GetName]."
  unrest.160.a:0 "Quash the rebellion!"
  unrest.160.a.tooltip:0 "Slave armies will attempt to seize the planet."
