--- a/mod/thmod/localisation/english/nemesis_custodian_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_custodian_l_english.yml
@@ -161,7 +161,7 @@
  YOUR_OWN:0 "your own"
  GDF:0 "GDF"
  IMPERIAL_AUTHORITY:0 "Imperial Authority"
- GALACTIC_FOCUS:0 "Galactic Focus"
+ GALACTIC_FOCUS:0 "โฟกัสของกาแลกติก"
  PROPOSE_RESOLUTION_GREETINGS_EMPIRE:1 "Glory to the Galactic Imperium!"
  CANCEL_RESOLUTION_DESC:0 "$RESOLUTION|H$ is canceled"
  custodian_remaining_term_time:1 "Once their term is up, the Custodian will revert to being a Galactic Council member."
@@ -171,7 +171,7 @@
  DECREASE_CUSTODIAN_TERM:0 "Current Galactic Custodian term decreases by $VAL|2R$ days"
  SET_CUSTODIAN_TERM:0 "Remaining Galactic Custodian term is set to $VAL|Y$ days"
  PERMANENT_CUSTODIAN:0 "§YPermanent§!"
- GALACTIC_FOCUS_NONE:0 "No Galactic Focus"
+ GALACTIC_FOCUS_NONE:0 "ไม่โฟกัส"
  GALACTIC_DEFENSE_FORCE_NOT_ESTABLISHED:1 "There is currently no §YGalactic Defense Force§!."
  IMPERIAL_ARMADA_NOT_ESTABLISHED:1 "There is currently no §YImperial Armada§!."
  ESTABLISH_GALACTIC_INSTITUTION:1 "The Custodian can propose its creation through a resolution."
@@ -203,7 +203,7 @@
  MESSAGE_RESOLUTION_FROZEN_BY_CUSTODIAN_DESC:0 "The Galactic Custodian, $LEADER|H$, froze the resolution $RESOLUTION|Y$. It can't be brought to a vote for at least £time£ $DAYS|Y$ days."
  MESSAGE_RESOLUTION_FROZEN_BY_EMPEROR_TITLE:0 "Resolution Frozen"
  MESSAGE_RESOLUTION_FROZEN_BY_EMPEROR_DESC:0 "The ruler of the Galactic Imperium, $LEADER|H$, froze the resolution $RESOLUTION|Y$. It can't be brought to a vote for at least £time£ $DAYS|Y$ days."
- GALACTIC_FOCUS_OBJECTIVES:0 "§EObjectives:§!"
+ GALACTIC_FOCUS_OBJECTIVES:0 "§Eเป้าหมาย:§!"
  COUNCIL_ABOLISHED:0 "§gThe Council has been abolished§!"
  GALACTIC_DEFENSE_FORCE_SHIP_PREFIX:0 "GDS"
  IMPERIAL_ARMADA_SHIP_PREFIX:0 "IAS"
